--- a/data/equipment/consumable-18-RkI3jKKrCozvEvfr.htm
+++ b/data/equipment/consumable-18-RkI3jKKrCozvEvfr.htm
@@ -14,7 +14,7 @@ Nom: Sommeil du roi
 <p><strong>Stage 3</strong> drained 2 (1 day)</p>
 ------ Description (fr) ------
 <p><span>Le sommeil du roi est un poison insidieux qui agit sur le long terme et passe pour une maladie ou même une mort naturelle chez un sujet âgé. L’état drainé dû au sommeil du roi est cumulatif à chaque jet de sauvegarde raté et ne peut être dissipé tant que le poison persiste dans l’organisme. <br></span></p>
-<p><strong>Activate</strong> <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">A</span> Interagir (Ingéré)</p>
+<p><strong>Activation</strong> <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">A</span> Interagir (Ingéré)</p>
 <p><span><strong>Jet de sauvegarde</strong> Vigueur DD 41 ; </p>
 <p><strong>Délai</strong> 1 jour; </p> 
 <p><strong>Stade 1</strong>  @Compendium[pf2e.conditionitems.4D2KBtexWXa6oUMR]{Drainé} 1 (1 jour) ;</p> 
