--- a/data/equipment/consumable-19-qK964kZz1ALcysOa.htm
+++ b/data/equipment/consumable-19-qK964kZz1ALcysOa.htm
@@ -8,6 +8,6 @@ Nom: Elixir de vie (ultime)
 </p><p>Elixirs of life accelerate a living creature's natural healing processes and immune system. Upon drinking this elixir, you regain [[/r 10d6+27]] Hit Points and gain +4 item bonus to saving throws against diseases and poisons for 10 minutes.</p>
 <p>@Compendium[pf2e.consumable-effects.9MeHc072G4L8AJkp]{Effect: Elixir of Life (True)}</p>
 ------ Description (fr) ------
-<p><strong>Activate</strong> <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">A</span>
+<p><strong>Activation</strong> <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">A</span>
 L’élixir de vie accélère le processus de guérison naturel du corps et son système immunitaire. En le buvant, vous récupérez [[/r 10d6+27]] points de vie et gagnez un bonus de +4 d’objet aux jets de sauvegarde contre la maladie et le poison pendant 10 minutes. 
-<p>@Compendium[pf2e.consumable-effects.9MeHc072G4L8AJkp]{Effect: Elixir de vie (Ultime)}</p>
+<p>@Compendium[pf2e.consumable-effects.9MeHc072G4L8AJkp]{Effet: Elixir de vie (Ultime)}</p>
