--- a/data/equipment/consumable-19-xQS1MSqGQz44FWUh.htm
+++ b/data/equipment/consumable-19-xQS1MSqGQz44FWUh.htm
@@ -15,7 +15,7 @@ Nom: Extrait de lotus noir
 <p><strong>Stage 3</strong> [[/r 20d6#poison]] poison damage and drained 2 (1 round)</p>
 ------ Description (fr) ------
 <p><span>L’extrait de lotus noir provoque de violentes hémorragies internes. <br></span></p>
-<p><strong>Activate</strong> <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">A</span> Interagir (Contact)</p>
+<p><strong>Activation</strong> <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">A</span> Interagir (Contact)</p>
 <p><span><strong>Jet de sauvegarde</strong> Vigueur DD 42  </p>
 <p><strong>Délai</strong>1 minute; </p>
 <p><strong>Durée maximum</strong> 6 rounds; </p>
