--- a/data/equipment/consumable-20-gDGPvobJV1QGYBPy.htm
+++ b/data/equipment/consumable-20-gDGPvobJV1QGYBPy.htm
@@ -15,7 +15,7 @@ Nom: Larmes de la mort
 <p><strong>Stage 3</strong> [[/r 30d6#poison]] poison damage and paralyzed (1 minute)</p>
 ------ Description (fr) ------
 <p><span>Les larmes de la mort font partie des poisons alchimiques les plus puissants et sont distillées à partir d’extraits de cinq autres poisons mortels selon un dosage précis.<br></span></p>
-<p><strong>Activate</strong> <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">A</span> Interagir (Contact)</p>
+<p><strong>Activation</strong> <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">A</span> Interagir (Contact)</p>
 <p><span><strong>Jet de sauvegard</strong> Vigueur DD 46; </p>
 <p><strong>Délai</strong>1 minute; </p>
 <p><strong>Durée maximum</strong> 10 minutes; </p>
