--- a/data/equipment/consumable-20-UHrLqWCnFEUspSQj.htm
+++ b/data/equipment/consumable-20-UHrLqWCnFEUspSQj.htm
@@ -13,4 +13,4 @@ Nom: Elixir de jouvence
 <p><strong>Activate</strong> <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">A</span> Interact</p>
 <p><span>L’élixir de jouvence restaure entièrement les points de vie d’une créature et éradique les toxines qui l’affectent. Lorsque vous buvez cet élixir, vos points de vie reviennent au maximum et toutes les afflictions de niveau 20 ou moins vous affligeant disparaissent. <br></span></p>
 <p>Vous pouvez administrer l’élixir à une créature décédée depuis une semaine ou moins. Elle est instantanément ramenée à la vie avec un point de vie, sans aucun emplacement de sort, point de focalisation ou autre ressource journalière.</p>
-<p><strong>Conditions de fabrication</strong>  pierre philosophale, élixir de vie ultime</p>
+<p><strong>Conditions de fabrication</strong>  @Compendium[pf2e.equipment-srd.Fv97oB3iEIFAyzTu]{Pierre philosophale}, @Compendium[pf2e.equipment-srd.qK964kZz1ALcysOa]{Elixir de vie ultime}</p>
