--- a/data/backgrounds/0c9Np7Yq5JSxZ6Tb.htm
+++ b/data/backgrounds/0c9Np7Yq5JSxZ6Tb.htm
@@ -12,5 +12,5 @@ Nom: Bricoleur d'Alkenstar
 <p><strong>Prérequis</strong> Région - Terres impossibles</p>
 <hr />
 <p>Votre dévotion pour la recherche scientifique de votre native Alkenstar vous fournit une profonde intuition pour l'innovation mécanique et chimique.</p>
-<p>Choisissez deux primes de Caractéristiques. L'une doit être l'<strong>Intelligence</strong> ou la <strong>Dextérité</strong> et l'autre est libre.</p>
+<p>Choisissez deux primes de Caractéristiques. L'une doit être d'<strong>Intelligence</strong> ou de <strong>Dextérité</strong> et l'autre est libre.</p>
 <p>Vous êtes qualifié en <strong>Artisanat</strong> et en Connaissance de l'Ingénierie. Vous obtenez le don de compétence @Compendium[pf2e.feats-srd.is3Oz9wt11lNq62K]{Artisanat alchimique}.</p>
