--- a/data/equipment/armor-05-slQRh4FVDzP8h1wj.htm
+++ b/data/equipment/armor-05-slQRh4FVDzP8h1wj.htm
@@ -24,8 +24,8 @@ Nom: Bouclier explosif
 ------ Description (fr) ------
 <p>La magie de ce bouclier en bois (Solidité 3, PV 12, SR 6) se déchaîne sur vos ennemis lorsque le bouclier est détruit.</p>
 <p><strong>Activation</strong> <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">F</span> Interagir;</p>
-<p><strong>Déclencheur</strong> Le boucler explosif est détruit;</p>
-<p><strong>Effet</strong> Le bouclier explose vers l'extérieur, infligeant 4d6 blessures perforantes à chaque créature dans un cône de 4,5 m (jet de sauvegarde Réflexes basique DD 19).</p>
+<p><strong>Déclencheur</strong> Le bouclier explosif est détruit</p>
+<p><strong>Effet</strong> Le bouclier explose vers l'extérieur, infligeant 4d6 dégâts perforants à chaque créature dans un cône de 4,5 m (jet de Réflexes basique DD 19).</p>
 <table style="height: 32px;" border="1">
 <tbody>
 <tr style="height: 15px;">
