--- a/data/backgrounds/2qH61dLeaqgNOdOp.htm
+++ b/data/backgrounds/2qH61dLeaqgNOdOp.htm
@@ -11,6 +11,6 @@ Nom: Pisteur du désert
 ------ Description (fr) ------
 <p><strong>Prérequis</strong> Région - Route dorée</p>
 <hr />
-<p>Vous êtes dans votre élément à parcourir les pistes torrides des sables brûlants et vous êtes fait une vie de conduire ou de suivre des créatures dans le désert. Vous pourriez être un nomade indigène, un guide du désert expérimenté, un naturaliste, un bandit conduit dans les dunes pour achapper à la loi — ou un peu de tout çà.</p>
+<p>Vous êtes dans votre élément à parcourir les pistes torrides de sables brûlants et vous êtes fait une vie de conduire ou de suivre des créatures dans le désert. Vous pourriez être un nomade indigène, un guide du désert expérimenté, un naturaliste, un bandit conduit dans les dunes pour échapper à la loi — ou un peu de tout ça à la fois.</p>
 <p>Choisissez deux primes de caractéristiques. Une de ces primes doit être <strong>Constitution</strong> ou <strong>Sagesse</strong> et l’autre est une prime de caractéristique libre.<br /></p>
 <p>Vous êtes qualifié dans la compétence Survie et Connaissance du Désert. Vous gagnez le don de compétence @Compendium[pf2e.feats-srd.urQZwmzg2kS53vd5]{Pisteur expérimenté}.</p>
