--- a/data/backgrounds/3kXTGUvodNMnJTxb.htm
+++ b/data/backgrounds/3kXTGUvodNMnJTxb.htm
@@ -9,6 +9,6 @@ Nom: Chercheur d'aiudara
 <p>You're trained in the Arcana skill and the Portal Lore skill. You gain the @Compendium[pf2e.feats-srd.IlOQuCQIhjJpig3S]{Quick Identification} skill feat.</p>
 ------ Description (fr) ------
 <p><strong>[Historique - Age des cendres]</strong></p>
-<p>L'<em>aiudara</em> de l'Anneau d'Alseta est devenue beaucoup mieux connue et vous êtes intéressé par en apprendre davantage à ce propos.</p>
+<p>Les<em>aiudaras</em> de l'Anneau d'Alseta sont devenus mieux connus et vous êtes intéressé 'd'en apprendre davantage à leur sujet.</p>
 <p>Choisissez deux primes de Caractéristiques. L'une doit être de <strong>Sagesse</strong> ou d'<strong>Intelligence</strong> et l'autre est libre.</p>
 <p>Vous êtes qualifié en Arcanes et en Connaissance des Portails. Vous obtenez le don de compétence @Compendium[pf2e.feats-srd.IlOQuCQIhjJpig3S]{Identification rapide}.</p>
