--- a/data/backgrounds/3M2FRDlunjFshzbq.htm
+++ b/data/backgrounds/3M2FRDlunjFshzbq.htm
@@ -1,5 +1,5 @@
 Name: Fogfen Tale-Teller
-Nom: Raconteur d'histoires des marais brumeux
+Nom: Raconteur d'histoires des Marais brumeux
 État: libre
 
 ------ Description (en) ------
@@ -7,6 +7,6 @@ Nom: Raconteur d'histoires des marais brumeux
 <p>Choose two ability boosts. One must be to <strong>Strength</strong> or <strong>Charisma</strong>, and one is a free ability boost.</p>
 <p>You're trained in Athletics and the Swamp Lore skill. You gain the @Compendium[pf2e.feats-srd.KxaYlC50zzHysJj8]{Titan Wrestler} skill feat.</p>
 ------ Description (fr) ------
-<p>Vous savez qu'il y a des choses monstrueuses dans les marais connus sous le nom de marais brumeux ; Vous avez vu ces choses à travers le brouillard, glissant parmi les eaux troubles et en sortir d'elles mêmes sur des morceaux de terre détrempées. Personne à Otari ne croit vos histoires de monstres des marais venues des profondeurs, même lorsque vous embellissez les créatures de vos histoires avec des crocs, des ailes ou des tentacules. Vous voulez juste leur prouver qu'il y a réellement des monstres là bas et qu'ils ont eu tort de douter de vous.</p>
+<p>Vous savez qu'il y a des choses monstrueuses dans les marais connus sous le nom de Marais brumeux ; vous avez vu ces choses dans le brouillard, glissant parmi les eaux troubles et se hissant sur des morceaux de terre détrempées. Personne à Otari ne croit vos histoires de monstres des marais venus des profondeurs, même lorsque vous garnissez les créatures de vos histoires avec des crocs, des ailes ou des tentacules. Vous voulez juste leur prouver qu'il y a réellement des monstres là-bas et qu'ils ont eu tort de douter de vous.</p>
 <p><p>Choisissez deux primes de caractéristiques. Une de ces primes doit être de <strong>Force</strong> ou de <strong>Charisme</strong> et l’autre est une prime de caractéristique libre.</p></p>
 <p>Vous êtes qualifié en Athlétisme et en Connaissance des marais. Vous obtenez le don de compétence @Compendium[pf2e.feats-srd.KxaYlC50zzHysJj8]{Lutteur contre les titans}.</p>
