--- a/data/backgrounds/4aVFnYyRajog0mNl.htm
+++ b/data/backgrounds/4aVFnYyRajog0mNl.htm
@@ -11,6 +11,6 @@ Nom: Fils de la Mante
 ------ Description (fr) ------
 <p><strong>Prérequis</strong> Région - Hautes mers</p>
 <hr />
-<p>Au moins un de vos parents est un membre des notoires assassins de la Mante Rouge, des tueurs sans pitié à louer qui n'échouent que rarement à réclamer leur récompense. Que ce soit délibérément ou par le biais de la simple exposition, vous êtes entraîné depuis votre jeune âge dans l'art de traquer et de tuer des gens.</p>
+<p>Au moins un de vos parents est un membre des notoires assassins de la Mante Rouge, des tueurs à gages sans pitié qui n'échouent que rarement à réclamer leur récompense. Que ce soit délibérément ou par le biais de la simple exposition, vous êtes entraîné depuis votre jeune âge dans l'art de traquer et de tuer des gens.</p>
 <p>Choisissez deux primes de caractéristiques. La première doit être de <strong>Dextérité </strong> ou de <strong>sagesse</strong> et l'autre est libre.</p>
 <p>Vous êtes qualifié en Discrétion et en connaissance de l'assassinat. Vous obtenez le don de compétence @Compendium[pf2e.feats-srd.W6Gl9ePmItfDHji0]{Assurance} avec la Discrétion.</p>
