--- a/data/backgrounds/4yN5miHoMvKwZIsa.htm
+++ b/data/backgrounds/4yN5miHoMvKwZIsa.htm
@@ -1,5 +1,5 @@
 Name: Press-Ganged
-Nom: Forçat
+Nom: Forçat des Mers
 État: libre
 
 ------ Description (en) ------
@@ -12,5 +12,5 @@ Nom: Forçat
 <p><strong>Prérequis</strong> Région - Hautes mers</p>
 <hr />
 <p>Vous avez été contraint à servir comme marin contre votre volonté. Peut-être avez vous été puni pour un crime, ou avez effectué un service militaire, payé une dette ou simplement été enlevé. Bien que n'aviez initialement été formé que pour être un simple homme de pont, vous avez pu étudier un métier sous la férule de l'un des spécialistes du vaisseau.</p>
-<p>Choisissez deux primes de caractéristiques. Une de ces primes doit être <strong>Force</strong> ou <strong>sagesse</strong>, et l’autre est une prime de caractéristique libre.</p>
+<p>Choisissez deux primes de caractéristiques. Une de ces primes doit être <strong>Force</strong> ou <strong>Sagesse</strong>, et l’autre est une prime de caractéristique libre.</p>
 <p>Vous êtes qualifié dans la compétence Société et Connaissance de la navigation. Vous gagnez le don de compétence @Compendium[pf2e.feats-srd.sMm0UfYxEPpq2Yzd]{Professionnel expérimenté}.</p>
