--- a/data/backgrounds/7K6ZSWOoihZKSdyd.htm
+++ b/data/backgrounds/7K6ZSWOoihZKSdyd.htm
@@ -1,5 +1,5 @@
 Name: Ruby Phoenix Enthusiast
-Nom: Enthousiaste du Phénix de rubis
+Nom: Passionné du Phénix de rubis
 État: libre
 
 ------ Description (en) ------
@@ -16,15 +16,15 @@ Nom: Enthousiaste du Phénix de rubis
 <hr />
 <p><strong>Special</strong>: You can select this background only if you have earned credit for at least 5 First Edition scenarios from Season 3 of the Pathfinder Society organized play campaign.</p>
 ------ Description (fr) ------
-<p>Nommé en référance à la légendaire ensorceleuse Hao Jin, le Tournoi du Phénix de rubis se produit une fois toutes les décennies à Goka et attire les talents extraordinaires de partout à travers le monde. Vous pourriez avoir commencé à vous entraîner pour le tournoi sans y avoir jamais participé ou peut-être y avoir participé mais perdu seulement face à la Société des Éclaireurs (et avoir voulu vous y joindre). Dans l'un ou l'autre cas, votre entraînement dédié vous a préparé aux rigueurs du style de vie aventureux.</p>
+<p>Nommé en référence à la légendaire ensorceleuse Hao Jin, le Tournoi du Phénix de rubis se produit une fois toutes les décennies à Goka et attire des talents extraordinaires du monde entier. Vous pourriez avoir commencé à vous entraîner pour le tournoi sans jamais y avoir participé ou peut-être y avoir participé mais perdu seulement face à la Société des Éclaireurs (et avoir voulu vous y joindre). Dans l'un ou l'autre cas, votre entraînement dédié vous a préparé aux rigueurs du style de vie aventureux.</p>
 <p>Choisissez deux primes de caractéristiques. Une de ces primes doit être de <strong>Force</strong> ou de <strong>Dextérité</strong> et l'autre est une prime de caractéristique libre.</p>
 <p>Vous êtes qualifié en Athlétisme et en Connaissance des gladiateurs. Vous obtenez le don de compétence @Compendium[pf2e.feats-srd.09PurtIanNUPfNRq]{Combattant-grimpeur}. De plus, vous obtenez l'accès à une des ses armes de moines peu courante :</p>
 <ul>
     <li>@Compendium[pf2e.equipment-srd.NIsxR5zXtVa3PuyU]{Épée du temple}.</li>
     <li>@Compendium[pf2e.equipment-srd.zSAoyzcf3nSeZCiF]{Kama},</li>
-<li>@Compendium[pf2e.equipment-srd.LA8wwpQBi6tylE6z]{Nunchaku},</li>
-<li>@Compendium[pf2e.equipment-srd.u2u6dkr01AB34tyA]{Sai} ou</li>
-<li>@Compendium[pf2e.equipment-srd.fjkwYZ0hRmBztwBG]{Shuriken}.</li>
+    <li>@Compendium[pf2e.equipment-srd.LA8wwpQBi6tylE6z]{Nunchaku},</li>
+    <li>@Compendium[pf2e.equipment-srd.u2u6dkr01AB34tyA]{Sai} ou</li>
+    <li>@Compendium[pf2e.equipment-srd.fjkwYZ0hRmBztwBG]{Shuriken}.</li>
 </ul>
 <hr />
 <p><strong>Spécial</strong> Vous ne pouvez sélectionner cet historique que si vous avez obtenu du crédit pendant au moins 5 scénarios de la Saison 3 du Jeu organisé de la Société des Éclaireurs.</p
