--- a/data/backgrounds/ajcpRVb5EG00l7Y4.htm
+++ b/data/backgrounds/ajcpRVb5EG00l7Y4.htm
@@ -11,6 +11,6 @@ Nom: Famille maudite
 ------ Description (fr) ------
 <p><strong>Prérequis</strong> Région - Œil de l’effroi </p>
 <hr />
-<p>Les rumeurs abondent sur une malédiction qui circule dans votre famille. Cela expliquerait plusieurs revers de fortune dans l'histoire de votre famille et vous pouvez choisir d'y croire ou non. Quoi qu'il en soit, nombre de coïncidences sont la plaie de votre lignée et apparaissent peut-être même dans votre propre vie et vous avez pris l'habitude de remarquer les choses étranges autour de vous.</p>
+<p>Les rumeurs abondent sur une malédiction qui circule dans votre famille. Même si cela expliquerait plusieurs revers de fortune dans l'histoire de votre famille,  vous pouvez choisir d'y croire ou non. Quoi qu'il en soit, nombre de coïncidences sont la plaie de votre lignée et apparaissent peut-être même dans votre propre vie et vous avez pris l'habitude de remarquer les choses étranges autour de vous.</p>
 <p>Choisissez deux primes de caractéristiques. L'une doit être d'<strong>Intelligence</strong> ou de <strong>Charisme</strong> et l'autre est libre.</p>
 <p>Vous êtes qualifié en Occultisme et en Connaissance des malédictions. Vous obtenez le don de compétence @Compendium[pf2e.feats-srd.hDGosy2ZTwnyctEP]{Identification de bizarreries}.</p>
