--- a/data/backgrounds/bDyb0k0rTfDTyhd8.htm
+++ b/data/backgrounds/bDyb0k0rTfDTyhd8.htm
@@ -11,6 +11,6 @@ Nom: Croisé du Geb
 ------ Description (fr) ------
 <p><strong>Prérequis</strong> Région - Terres impossibles</p>
 <hr />
-<p>Vous avez grandi en considérant que la nation morte-vivante du Geb est une atrocité et vous êtes entraîné pour pouvoir un jour prendre part à sa destruction et pour donner un repos définitif à ses habitants. Un élément de vos préparatifs est une étude approfondie de Pharasma, d'Urgathoa et d'autres divinités en lien avec les morts-vivants et leurs philosophies.</p>
+<p>Vous avez grandi en considérant que la nation morte-vivante du Geb est une atrocité et vous vous êtes entraîné pour pouvoir un jour prendre part à sa destruction forçant ainsi un repos définitif à ses abominables habitants. Un élément de vos préparatifs est une étude approfondie de Pharasma, d'Urgathoa et d'autres divinités en lien avec les morts-vivants et leurs philosophies.</p>
 <p>Choisissez deux primes de caractéristiques. Une de ces primes doit être <strong>Constitution</strong> ou <strong>Sagesse</strong>, et l’autre est une prime de caractéristique libre.</p>
 <p>Vous êtes qualifié dans la compétence Religion et Connaissance des morts-vivants. Vous obtenez le don de compétence @Compendium[pf2e.feats-srd.x7EMZNMavris2aHY]{Étudiant du droit canon}.</p>
