--- a/data/backgrounds/bh6O2Ad5mkYwRngM.htm
+++ b/data/backgrounds/bh6O2Ad5mkYwRngM.htm
@@ -11,6 +11,6 @@ Nom: Expatrié d'Herméa
 ------ Description (fr) ------
 <p><strong>Prérequis</strong> Région - Hautes mers</p>
 <hr />
-<p>Vous avez été éxilé d'Herméa, peut-être de votre propre volonté ou peut-être à cause du fait que vous n'étiez pas à la hauteur. Quoi qu'il en soit, vous avez emporté avec vous certains des avantages de l'excellente éducation accordée à ses citoyens.</p>
+<p>Vous avez été éxilé d'Herméa, soit parce que vous l'avez décidé ou peut-être du fait que vous n'étiez pas à la hauteur. Quoi qu'il en soit, vous avez emporté avec vous certains des avantages de l'excellente éducation accordée à ses citoyens.</p>
 <p>Choisissez deux primes de caractéristiques. Une de ces primes doit être <strong>Intelligence</strong> ou <strong>Charisme</strong>, et l’autre est une prime de caractéristique libre.<br /></p>
 <p>Vous êtes qualifié dans la compétence Société et Connaissance des dragons. Vous gagnez le don de compétence @Compendium[pf2e.feats-srd.P6icK2DbRoZ3H6kc]{Compétence qualifiante}.</p>
