Update equipment "changé"

--- a/data/equipment/armor-15-Wkh5rQx3IqInEKdT.htm
+++ b/data/equipment/armor-15-Wkh5rQx3IqInEKdT.htm
@@ -1,7 +1,6 @@
 Name: Robe of the Archmagi
 Nom: Robe d'Archimage
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>Embroidered with fine silver thread in ornate arcane patterns, these robes come in one of three colors depending on their attuned alignment. Good robes are white, neutral robes are gray, and evil robes are black. An evil or good robe gains the appropriate trait. The robes benefit only characters who can cast arcane spells and whose alignment on the good-evil axis matches that of the robe. If your alignment does not match that of the robe, or you are not an arcane spellcaster, you are instead stupefied 2 while wearing a robe of the archmagi. This condition can't be removed in any way until you remove the robe.</p>
@@ -23,7 +22,7 @@ Nom: Robe d'Archimage
 <p>Les robes sont des <em>vêtements d’explorateur de résilience supérieure +2</em> qui confèrent un bonus de circonstances de +1 aux jets de sauvegarde contre les sorts arcaniques et une résistance 5 aux dégâts des sorts arcaniques. </p>
 <hr />
 <p><strong>Activation</strong> <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">R</span> sur ordre; </p>
-<p><strong>Fréquence</strong> 1/jour;</p> 
+<p><strong>Fréquence</strong> 1/jour;</p>
 <p><strong>Déclencheur</strong> Vous devez faire un jet de sauvegarde contre un sort arcanique mais vous n’avez pas encore lancé le dé ;</p>
 <p><strong>Effet</strong>  Vous réussissez automatiquement votre jet de sauvegarde contre le sort arcanique déclencheur.</p>
 <hr />
