--- a/data/equipment/armor-16-R1I1MEKwDYtCfZr3.htm
+++ b/data/equipment/armor-16-R1I1MEKwDYtCfZr3.htm
@@ -37,4 +37,4 @@ Nom: Targe en peau de dragon (Haute qualité)
 </tbody>
 </table>
 
-<p><span>Le bouclier a une solidité de 5, 20 PV et une SR de 10.<br><strong>Conditions de fabrication</strong> au moins 4000 po de peau de dragon</span></p>
+<p><span>Le bouclier a une solidité de 5, 20 PV et une SR de 10.<br /><strong>Conditions de fabrication</strong> au moins 4000 po de peau de dragon</span></p>
