--- a/data/equipment/armor-16-LVixPROPOwIfHgEK.htm
+++ b/data/equipment/armor-16-LVixPROPOwIfHgEK.htm
@@ -47,25 +47,24 @@ Nom: Bouclier en Peau de Dragon de Haute Qualité
 </tr>
 <tr style="box-sizing: border-box; user-select: text; height: 17px;">
 <td style="box-sizing: border-box; user-select: text; width: 116px; background-color: #f6f1e1; height: 17px; text-align: center;">Airain, or ou rouge<br><span id="ctl00_MainContent_DetailedOutput" style="box-sizing: border-box; user-select: text; display: block;"></span></td>
-<td style="box-sizing: border-box; user-select: text; width: 251px; background-color: #f6f1e1; height: 17px; text-align: center;"><span id="ctl00_MainContent_DetailedOutput">Feu</span></td>
+<td style="box-sizing: border-box; user-select: text; width: 251px; background-color: #f6f1e1; height: 17px; text-align: center;"><span>Feu</span></td>
 </tr>
 <tr style="height: 20px;">
-<td style="box-sizing: border-box; user-select: text; width: 116px; background-color: #eee5c8; text-align: center; height: 20px;"><span id="ctl00_MainContent_DetailedOutput">Argent ou blanc</span></td>
-<td style="box-sizing: border-box; user-select: text; width: 251px; background-color: #eee5c8; text-align: center; height: 20px;"><span id="ctl00_MainContent_DetailedOutput">Froid&nbsp;</span></td>
+<td style="box-sizing: border-box; user-select: text; width: 116px; background-color: #eee5c8; text-align: center; height: 20px;"><span>Argent ou blanc</span></td>
+<td style="box-sizing: border-box; user-select: text; width: 251px; background-color: #eee5c8; text-align: center; height: 20px;"><span>Froid&nbsp;</span></td>
 </tr>
 <tr style="height: 20px;">
-<td style="box-sizing: border-box; user-select: text; width: 116px; background-color: #f6f1e1; text-align: center; height: 20px;"><span id="ctl00_MainContent_DetailedOutput">Bleu ou bronze</span></td>
-<td style="box-sizing: border-box; user-select: text; width: 251px; background-color: #f6f1e1; text-align: center; height: 20px;"><span id="ctl00_MainContent_DetailedOutput">Électricité&nbsp;</span></td>
+<td style="box-sizing: border-box; user-select: text; width: 116px; background-color: #f6f1e1; text-align: center; height: 20px;"><span>Bleu ou bronze</span></td>
+<td style="box-sizing: border-box; user-select: text; width: 251px; background-color: #f6f1e1; text-align: center; height: 20px;"><span>Électricité&nbsp;</span></td>
 </tr>
 <tr style="height: 20px;">
-<td style="box-sizing: border-box; user-select: text; width: 116px; background-color: #eee5c8; text-align: center; height: 20px;"><span id="ctl00_MainContent_DetailedOutput">Noir ou cuivre</span></td>
-<td style="box-sizing: border-box; user-select: text; width: 251px; background-color: #eee5c8; text-align: center; height: 20px;"><span id="ctl00_MainContent_DetailedOutput">Acide&nbsp;</span></td>
+<td style="box-sizing: border-box; user-select: text; width: 116px; background-color: #eee5c8; text-align: center; height: 20px;"><span>Noir ou cuivre</span></td>
+<td style="box-sizing: border-box; user-select: text; width: 251px; background-color: #eee5c8; text-align: center; height: 20px;"><span>Acide&nbsp;</span></td>
 </tr>
 <tr style="height: 20px;">
-<td style="box-sizing: border-box; user-select: text; width: 116px; background-color: #f6f1e1; text-align: center; height: 20px;"><span id="ctl00_MainContent_DetailedOutput">Vert</span></td>
-<td style="box-sizing: border-box; user-select: text; width: 251px; background-color: #f6f1e1; text-align: center; height: 20px;"><span id="ctl00_MainContent_DetailedOutput">Poison&nbsp;</span></td>
+<td style="box-sizing: border-box; user-select: text; width: 116px; background-color: #f6f1e1; text-align: center; height: 20px;"><span>Vert</span></td>
+<td style="box-sizing: border-box; user-select: text; width: 251px; background-color: #f6f1e1; text-align: center; height: 20px;"><span>Poison&nbsp;</span></td>
 </tr>
 </tbody>
 </table>
-
-<p><span>Le bouclier a une solidité de 7, 28 PV et une SR de 14.<br><strong>Conditions de fabrication</strong> au moins 4 400 po de peau de dragon</span></p>
+<p><span>Le bouclier a une solidité de 7, 28 PV et une SR de 14.<br /><strong>Conditions de fabrication</strong> au moins 4 400 po de peau de dragon</span></p>
