--- a/data/equipment/weapon-03-onFxlajKyWpHZcXt.htm
+++ b/data/equipment/weapon-03-onFxlajKyWpHZcXt.htm
@@ -1,6 +1,6 @@
 Name: Smoking Sword
-Nom: 
-État: auto-trad
+Nom: Épée fumante
+État: libre
 
 ------ Description (en) ------
 <p>Smoke constantly belches from this +1 magic longsword. Any hit with this sword deals 1 extra fire damage. You can use a special action while holding the sword to command the blade’s edges to light on fire.</p>
@@ -12,14 +12,14 @@ Nom:
 <li>+1 fire damage, and ability to activate Stoke Flames</li>
 </ul>
 ------ Description (fr) ------
-<p> Fumée Belche constamment de cet arborescence magique +1.
- Tout succès avec cette épée traite 1 dommage supplémentaire d'incendie.
- Vous pouvez utiliser une action spéciale tout en maintenant l'épée pour commander les bords de la lame pour allumer le feu. </p>
-<p> <strong> Stoke flammes </strong> <style de span = "Font-famille: 'Pathfinder2action'; Taille de la police: 1.8em; Affichage: Inline;"> A </Span> (Concentré) </p>
-<p> Jusqu'à la fin de votre tour, la lame inflige 1d6 endommagées de feu supplémentaires au lieu de seulement 1. Après avoir utilisé cette action, vous ne pouvez plus l'utiliser pendant 10 minutes. </p>
+<p>Cette épée longue magique +1 crache constamment de la fumée.
+ Tout succès avec cette épée inflige 1 dégat de feu supplémentaire.
+ Quand vous tenez l'épée, vous pouvez utiliser une action spéciale pour enflammer le fil de la lame.</p>
+<p><strong>Attiser le feu</strong><span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">A </span>(concentration)</p>
+<p>Jusqu'à la fin de votre tour, la lame inflige 1d6 dégats de feu supplémentaires au lieu de seulement 1. Après avoir utilisé cette action, vous ne pouvez plus l'utiliser pendant 10 minutes. </p>
 <h />
-<p> Effets appliqués automatiquement: </p>
+<p> Effets appliqués automatiquement:</p>
 <ul>
-<li> +1 dommages à l'incendie et capacité d'activation des flammes de stoke </li>
+<li>+1 dégats de feu et capacité d'activation Attiser le feu</li>
 </ul>
  
