--- a/data/equipment/weapon-05-hK5xPjOFd2hb81mi.htm
+++ b/data/equipment/weapon-05-hK5xPjOFd2hb81mi.htm
@@ -1,10 +1,10 @@
 Name: Poisonous Dagger
-Nom: 
-État: auto-trad
+Nom: Dague empoisonnée
+État: libre
 
 ------ Description (en) ------
 <p>This +1 striking dagger has an image of a snake emblazoned on its blade. When you critically succeed at an attack roll with the dagger, magical fangs emerge and poison the target, dealing [[/r 1d4 # poison]] persistent poison damage.</p>
 ------ Description (fr) ------
-<p> Ce dague de +1 frappant a une image d'un serpent emblémué sur sa lame.
- Lorsque vous réussissez de manière critique à un rouleau d'attaque avec le poignard, les crocs magiques émergent et empoisonnent la cible, traitant [[[/r12 # poison]] Dommages poison persistants. </p>
+<p>La lame de cette dague de frappe +1  est frappée d'une image de serpent.
+ Lorsque vous obtenez un succès critique à un jet d'attaque avec la dague, des crocs magiques émergent et empoisonnent la cible, infligeant [[[/r 1d4 #poison]] dégats de poison persistants. </p>
  
