--- a/data/equipment/weapon-03-EuTZxxwdVeN6Xg3A.htm
+++ b/data/equipment/weapon-03-EuTZxxwdVeN6Xg3A.htm
@@ -1,14 +1,12 @@
 Name: Storm Hammer
-Nom: 
-État: auto-trad
+Nom: Marteau des tempêtes
+État: libre
 
 ------ Description (en) ------
 <p>Sparks of crackling electricity arc from this +1 magic warhammer, and the head thrums with distant thunder. Any hit with this hammer deals [[/r 1 # electricity]] extra electricity damage. You can use a special action while holding the hammer to transform the sparks into lightning bolts.</p>
 <p><strong>Electrify</strong> <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">A</span> (concentrate) Until the end of your turn, the hammer deals [[/r 1d6 # electricity]] extra electricity damage instead of just 1. After you use this action, you can’t use it again for 10 minutes.</p>
 ------ Description (fr) ------
-<p> étincelles de craquements d'électricité arc de ce +1 Magic Warhammer, et la tête grognade avec un tonnerre lointain.
- Tout hit avec ce marteau offres [[/r 1 # Electricité]] Dommages supplémentaires en électricité.
- Vous pouvez utiliser une action spéciale tout en maintenant le marteau pour transformer les étincelles en boulons de foudre. </p>
-<p> <strong> électrification </strong> <style <span = "Font-famille: 'Pathfinder2action'; Taille de la police: 1.8em; Affichage: Inline;"> A </Span> (Concentré) jusqu'à la fin de votre
- Tourner, le marteau offres [[/r 1d6 # Electricité]] Dommages d'électricité supplémentaires au lieu de 1. Une fois que vous utilisez cette action, vous ne pouvez plus l'utiliser pendant 10 minutes. </p>
- 
+<p> Des étincelles crépitantes d'électricité partnet de ce marteau de guerre magique +1, et la tête vrombit d'un tonnerre lointain.
+ Un coup donné par ce marteau inflige [[/r 1 #electricity]] dégats d'électricité supplémentaires.
+ Vous pouvez utiliser une action spéciale quand vous tenez le marteau pour transformer les étincelles en éclairs.</p>
+<p> <strong>Electrification </strong> <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">A </span> (concentration) jusqu'à la fin de votre tour, le marteau inflige [[/r 1d6 #electricity]] dégats d'électricité supplémentaires au lieu de 1. Après avoir utilisé cette action, vous ne pouvez plus l'utiliser pendant 10 minutes. </p>
