--- a/data/equipment/weapon-05-1S3RgLWa1DBitB9V.htm
+++ b/data/equipment/weapon-05-1S3RgLWa1DBitB9V.htm
@@ -1,6 +1,6 @@
 Name: Dagger of Eternal Sleep
-Nom: 
-État: auto-trad
+Nom: Dague du sommeil éternel
+État: libre
 
 ------ Description (en) ------
 <p>This tiny serrated dagger looks like a miniature sawtooth sabre. Until activated, it is too small and ornamental to function as a weapon, which might allow it to be passed off as a weapon-shaped decoration.</p>
@@ -8,12 +8,11 @@ Nom:
 <p><strong>Effect</strong> You transform the dagger of eternal sleep into a +1 @Compendium[pf2e.equipment-srd.qUnDHEXteUQGE8yp]{Grievous} striking dagger and Strike an unconscious target with the dagger.</p>
 <p>If you are not in an encounter or otherwise threatened and you roll a hit with your Strike, you get a critical hit instead. The damage from the Strike and the bleed from the critical specialization effect do not awaken the target, though the target becomes temporarily immune to this effect until the next time it wakes up, meaning further daggers of eternal sleep awaken it as normal. The dagger disintegrates immediately after use.</p>
 ------ Description (fr) ------
-<p> Ce minuscule poignard dentelé ressemble à un sabre de scie miniature.
- Jusqu'à activer, il est trop petit et ornemental pour fonctionner comme une arme, ce qui pourrait lui permettre d'être transmis comme une décoration en forme d'arme. </p>
-<p> <strong> activer </strong> <style = "style =" Font-famille: 'Pathfinder2action'; Taille de la police: 1.8em; Affichage: Inline; "> A </p> Interact </p>
-<p> <strong> effet </strong> vous transformez le dague de sommeil éternel dans un +1 @compendium [pf2e.equipfip-srd.qundhexteuqge8yps] {grief} Dague frappante et frappe une cible inconsciente avec le poignard. </P
- >
-<p> Si vous n'êtes pas dans une rencontre ou que vous avez mal menacé et que vous roulez un coup avec votre grève, vous obtenez un coup critique à la place.
- Les dommages causés par la grève et le saignement de l'effet de spécialisation critique ne réveillent pas la cible, bien que la cible devienne temporairement à l'abri de cet effet jusqu'à la prochaine fois qu'il se réveille, ce qui signifie que des dagues supplémentaires du sommeil éternel l'éveillent comme normale.
- La poignée se désintègre immédiatement après utilisation. </p>
+<p> Ce minuscule poignard dentelé ressemble à un sabre dentelé.
+ Avant activation, il est trop petit et ornemental pour être utilisé comme une arme, ce qui peut lui permettre de passer pour une décoration en forme d'arme. </p>
+<p> <strong>Activation</strong><span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">A</p>Interagir </p>
+<p> <strong>Effet</strong>Vous transformez la dague du sommeil éternel en une dague de frappe @Compendium[pf2e.equipment-srd.qUnDHEXteUQGE8yp]{douloureuse} +1 et Frappez une cible inconsciente avec la dague.</p>
+<p> Si vous n'êtes pas dans une rencontre ou menacé et que vous réussissez votre frappe, vous obtenez une réussite critique à la place.
+ Les dommages causés par la frappe et le saignement de l'effet de spécialisation critique ne réveillent pas la cible, bien que la cible devienne temporairement immunisée contre cet effet jusqu'à la prochaine fois qu'elle se réveille, ce qui signifie qu'utiliser d'autres dagues du sommeil éternel la réveilleront.
+ La dague se désintègre immédiatement après utilisation. </p>
  
