--- a/data/equipment/weapon-05-6HOQwVUQNplJsrhq.htm
+++ b/data/equipment/weapon-05-6HOQwVUQNplJsrhq.htm
@@ -1,6 +1,6 @@
 Name: Reaper's Lancet
-Nom: 
-État: auto-trad
+Nom: Lancette de la faucheuse
+État: libre
 
 ------ Description (en) ------
 <p>Hendrid Pratchett himself designed this custom skull-topped +1 striking exquisite sword cane and had it gilded in high-quality gold. Its first victim was the very smith whom Pratchett commissioned to craft the weapon, so the means of its construction are a secret known only to Pratchett. The magic of the <em>Reaper's Lancet</em> applies to both the blade and the sheath, making them each effectively a +1 striking weapon, but only if both are wielded by the same creature-if the two components are shared between creatures, only the blade retains the rune's magic.</p>
@@ -9,9 +9,9 @@ Nom:
 <p><strong>Trigger</strong> You damage a creature with Reaper's Lancet;</p>
 <p><strong>Effect</strong> You poison the creature you hit with the poison currently in the reservoir.</p>
 ------ Description (fr) ------
-<p> Hendrid Pratchett lui-même a conçu ce crâne personnalisé - surmonté de la canne d'épée exquise et qui l'avait doré en or de haute qualité. Sa première victime était la très forgeron que Pratchett a commandé d'armer l'arme. Les moyens de sa construction sont un secret connu uniquement pour Pratchett. La magie de la lancette <em> </EM> s'applique à la fois à la lame et à la gaine, ce qui les faisait chaque effective une arme frappante de +1, mais uniquement si les deux sont battues par la même créature - si les deux composants sont partagés entre créatures, seule la lame conserve la magie de la rune. </p>
-<p> <em> la lancette de Reaper </EM> a un réservoir caché à l'intérieur du crâne qui applique automatiquement une nouvelle dose de poison à la lame après la compensation de la dose précédente avec une grève réussie. Le réservoir doit être rempli manuellement (un processus nécessitant une minute) et est suffisamment grand pour ne contenir que 3 doses à la fois. Toute sorte de poison livré par une blessure peut être placé dessus, bien que toutes les doses doivent être du même poison. Le prix du poison n'est pas reflété dans le prix énumétaire de ce arme. </p>
-<p> <strong> activate </strong> <style = "style =" Font-famille: 'Pathfinder2action'; Taille de la police: 1.8em; Affichage: Inline; "> R </p> Interact; </p>
-<p> <strong> déclencheur </strong> Vous endommagez une créature avec Lancet de Reaper; </p>
-<p> <strong> effet </strong> vous empoisonner la créature que vous avez frappée avec le poison actuellement dans le réservoir. </p>
+<p> Hendrid Pratchett a conçu lui-même cette canne épée raffinée de frappe +1 au pommeau en forme de crâne, et l'a faite dorer avec or de haute qualité. Sa première victime a été le forgeron que Pratchett a engagé pour fabriquer cette arme, sa méthode de construction est donc un secret connu uniquement par Pratchett. La magie de la <em>lancette de la faucheuse</em> s'applique à la fois à la lame et à la gaine, ce qui fait de chacune d'elle une arme de frappe +1, mais uniquement si les deux sont maniées par la même créature - si elles sont utilisées séparément par plusieurs créatures, seule la lame conserve la magie de la rune. </p>
+<p> <em>La Lancette de la faucheuse </em> a un réservoir caché à l'intérieur du crâne qui applique automatiquement une nouvelle dose de poison à la lame après utilisation de la dose précédente par une Frappe réussie. Le réservoir doit être rempli manuellement (un processus nécessitant une minute) et est peut contenir au maximum 3 doses. Toute sorte de poison délivrable par une blessure peut y être placé, mais toutes les doses doivent être du même poison. Le prix du poison n'est pas compris dans le prix listé pour cette arme.</p>
+<p> <strong>Activation</strong><span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">R</span>Interagir;</p>
+<p> <strong>Déclencheur</strong>Vous infligez des défats à une créature avec la lancette de la faucheuse; </p>
+<p> <strong>Effet</strong>Vous empoisonnez la créature que vous avez frappée avec le poison actuellement dans le réservoir.</p>
  
