--- a/data/equipment/weapon-06-5izv7y9mzqHJmAyL.htm
+++ b/data/equipment/weapon-06-5izv7y9mzqHJmAyL.htm
@@ -1,11 +1,11 @@
 Name: Cooperative Blade
-Nom: 
-État: auto-trad
+Nom: Lame coopérative
+État: libre
 
 ------ Description (en) ------
 <p>This +1 striking longsword has a mirror-like blade free of tarnish despite being millennia old. While wielding it, you gain a +2 item bonus to checks to Aid. If you’re an expert with the skill or attack roll you’re using to Aid and you critically succeed, you grant your ally a +3 circumstance bonus to the triggering check instead of a +2 bonus.</p>
 ------ Description (fr) ------
-<p> Cet arborescades longues et similaires a une lame ressemblant à un miroir exempt de ternis, malgré l'âge de millénaire.
- En l'exagérant, vous gagnez un bonus d'élément de +2 pour vérifier.
- Si vous êtes un expert avec la compétence ou le rouleau d'attaque que vous utilisez pour aider et vous réussissez de manière critique, vous accordez à votre allié un bonus de circonstance de +3 au chèque de déclenchement au lieu d'un bonus de +2. </p>
+<p>Cet épée longue de frappe +1 possède une lame ressemblant à un miroir exempt de ternissures, bien qu'elle soit millénaire.
+ En la maniant, vous gagnez un bonus d'objet de +2 pour Aider.
+ Si vous êtes un expert dans la compétence ou le jet d'attaque que vous utilisez pour aider et que vous obtenez une réussite critique, vous permettez à votre allié de bénéficier un bonus de circonstance de +3 au test déclencheur au lieu d'un bonus de +2.</p>
  
