--- a/data/equipment/weapon-06-pjUACbrAXNIy9O7S.htm
+++ b/data/equipment/weapon-06-pjUACbrAXNIy9O7S.htm
@@ -1,6 +1,6 @@
 Name: Twining Staff
-Nom: 
-État: auto-trad
+Nom: Bâton enroulé
+État: officielle
 
 ------ Description (en) ------
 <p>Appearing to be just a small, flat disc made of twigs, this item can grow and shrink.</p>
@@ -8,13 +8,12 @@ Nom:
 <p><strong>Effect</strong> You cause the twigs to rapidly grow or contract, reshaping into a <em>+1 striking staff</em>, a <em>+1 striking bo staff</em>, or its disc form. In its disc form, it has negligible Bulk and must be held in one hand to be activated. In the other forms, it has the same Bulk as a normal weapon of its type. You can switch your grip as part of the activation.</p>
 <p>When you expand the item, you can use the force of the expansion to High Jump or to try to Force Open a door or the like by wedging the disc into a gap before activation. The staff makes the Athletics check with a [[/r 1d20+15]] modifier.</p>
 ------ Description (fr) ------
-<p> semblant être juste un petit disque plat composé de brindilles, cet objet peut se développer et se rétrécir. </p>
-<p> <strong> activer </strong> <style = "style =" Font-famille: 'Pathfinder2action'; Taille de la police: 1.8em; Affichage: Inline; "> A </p> Interact </p>
-<p> <strong> effet </strong> Vous faites connaître ou contracter les brindilles de la croissance rapide ou du contrat, de remodeler dans un </em> </em>, un </em> +1 stranding bo personnel </em>,
- ou son formulaire de disque.
- Dans sa forme de disque, il a une masse négligeable et doit être maintenue dans une main pour être activée.
- Dans les autres formes, il a le même volume qu'une arme normale de son type.
- Vous pouvez changer votre adhérence dans le cadre de l'activation. </p>
-<p> Lorsque vous développez l'article, vous pouvez utiliser la force de l'expansion au saut élevé ou pour tenter de forcer une porte ouverte ou similaire en califiant le disque dans une intervalle avant l'activation.
- Le personnel fait vérifier l'athlétisme avec un modificateur [[[[[[[1d20 + 15]]. </p>
+<p>Cet objet est un petit disque plat composé de brindilles qui peut grandir et rapetisser.</p>
+<p><strong>Activation</strong><span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">A</span> Interagir</p>
+<p><strong>Effet</strong>
+Vous provoquez la pousse ou la contraction rapide des brindilles pour qu’elles prennent la forme d’un <em>bâton de frappe +1</em>, un <em>bo de frappe +1</em>
+ou pour qu’elles reprennent leur forme de disque. Sous sa forme de disque, il a un Encombrement négligeable et il faut le tenir dans une main pour l’activer. Sous ses autres formes, il a le
+même Encombrement qu’une arme normale de son type. Vous pouvez changer votre prise sur l’objet au cours de l’activation.
+<p>Quand vous faites grandir l’objet, vous pouvez exploiter la poussée de l’agrandissement pour Sauter en hauteur ou pour tenter d’Ouvrir de force une porte ou une chose similaire en calant le disque dans
+une fissure avant de l’activer. Le bâton fait le test d’Athlétisme avec un modificateur de [[/r 1d20+15]].</p>
  
