--- a/data/equipment/weapon-10-6u14xOkKhnB9lVy0.htm
+++ b/data/equipment/weapon-10-6u14xOkKhnB9lVy0.htm
@@ -1,9 +1,9 @@
 Name: Staff of Illusion (Greater)
-Nom: 
-État: auto-trad
+Nom: Bâton d'illusion supérieur
+État: officielle
 
 ------ Description (en) ------
-<p>This staff is tapered at the base and carved into a gem-studded twist at the top. While wielding the staff, you gain a +2 circumstance bonus to checks to identify evocation magic.</p>
+<p>This ornately designed metal staff shines with precious inlays of gold. When you Cast a Spell from the staff, the illusory image of something you desire flashes across its surface. While wielding the staff, you gain a +2 circumstance bonus to checks to identify illusion magic.</p>
 <p><strong>Activate</strong> Cast a Spell</p>
 <p><strong>Effect</strong> You expend a number of charges from the staff to cast a spell from its list.</p>
 <ul>
@@ -20,20 +20,20 @@ Nom:
 <li>+2 circumstance bonus to checks to identify illusion magic</li>
 </ul>
 ------ Description (fr) ------
-<p> Ce personnel est effilé à la base et sculpté dans une touche cloutée de gemme en haut. Tout en brandissant le personnel, vous gagnez un bonus de circonstance de +2 pour vérifier l'identification de la magie d'évocation. </p>
-<p> <strong> activer </strong> lancer un sort </p>
-<p> <strong> effet </strong> Vous dépensez un certain nombre de charges du personnel pour lancer un sort de sa liste. </p>
+<p>Les incrustations d’or précieux font briller ce bâton métallique richement forgé. Quand vous Lancez un sort que contient le bâton, l’image illusoire d’une chose que vous désirez apparaît à sa surface. Lorsque vous le maniez, vous bénéficiez d’un bonus de circonstances de +2 aux tests pour identifier la magie d’illusion.</p>
+<p> <strong>Activation</strong>Lancer un sort</p>
+<p> <strong>Effet</strong> Vous dépensez un certain nombre de charges du bâton pour lancer un sort de sa liste.</p>
 <ul>
-<li> <strong> Cantrip </strong> @compendium [pf2e.spells-srd.atlggni1e1ox3o3a] {Ghost Sound} </Li>
-<li> <strong> 1st </strong> @compendium [pf2e.spells-srd.i35dpzfi7jzcrobo] {Disguise illusoire}, @compendium [pf2e.spells-srd.2oh5iufzdeesuyxat] {objet illusoire} </li>
-<li> <strong> 2e </strong> @compendium [pf2e.spells-srd.f8sboxixqjlckqly] {créature illusoire}, @compendium [pf2e.spells-srd.4zgte0i9yblh4DRI] {élément façade} </li>
-<li> <strong> 3ème </strong> @compendium [pf2e.spells-srd.i35dpzfi7jzcrobo] {Disguise illusoire}, @compendium [pf2e.spells-srd.4zgte0i9yblh4Dri] {article façade} </li>
-<li> <strong> 4ème </strong> @compendium [pf2e.spells-srd.f8sboxixqjlckqly] {créature illusoire}, @compendium [pf2e.spells-srd.hkfh9z53hpzcowb] {voile} </li>
+<li> <strong>Tour de magie</strong>@Compendium[pf2e.spells-srd.atlgGNI1E1Ox3O3a]{son imaginaire}</li>
+<li> <strong>Niveau 1</strong>@Compendium[pf2e.spells-srd.i35dpZFI7jZcRoBo]{déguisement illusoire}, @Compendium[pf2e.spells-srd.2oH5IufzdESuYxat]{objet illusoire} </li>
+<li> <strong>Niveau 2</strong>@Compendium[pf2e.spells-srd.f8SBoXiXQjlCKqly]{créature illusoire}, @Compendium[pf2e.spells-srd.4ZGte0i9YbLh4dRi]{façade} </li>
+<li><strong>Niveau 3</strong> @Compendium[pf2e.spells-srd.i35dpZFI7jZcRoBo]{déguisement illusoire}, @Compendium[pf2e.spells-srd.4ZGte0i9YbLh4dRi]{façade}</li>
+<li><strong>Niveau 4</strong> @Compendium[pf2e.spells-srd.f8SBoXiXQjlCKqly]{créature illusoire}, @Compendium[pf2e.spells-srd.hkfH9Z53hPzcOwNB]{voile}</li>
 </ul>
-<p> <strong> EXIGENCES D'ARTISANAT </FORT> Fournissez une coulée de tous les niveaux énumérés de tous les sorts répertoriés. </p>
+<p> <strong>Conditions de fabrication</strong>Fournissez une incantation de tous les sorts de la liste et à tous les niveaux indiqués.</p>
 <h />
-<p> Effets appliqués automatiquement: </p>
+<p> Effets appliqués automatiquement:</p>
 <ul>
-<LI> +2 bonus de circonstance à vérifier pour identifier l'illusion magique </li>
+<li> +2 bonus de circonstance aux tests pour identifier la magie d'illusion</li>
 </ul>
  
