--- a/data/equipment/weapon-12-wWBi79jkzYGWD6uC.htm
+++ b/data/equipment/weapon-12-wWBi79jkzYGWD6uC.htm
@@ -1,6 +1,6 @@
 Name: Ringmaster's Staff (Greater)
-Nom: 
-État: auto-trad
+Nom: Bâton de maître de cérémonie supérieur
+État: libre
 
 ------ Description (en) ------
 <p>This highly polished black wooden staff resembles an aristocrat's oversized walking cane, complete with a silver head shaped like a large circus animal such as a horse or elephant. Ringmasters or announcers use <em>ringmaster's staves</em> to draw attention from their audiences or to salvage acts that fall flat mid-performance.</p>
@@ -17,17 +17,17 @@ Nom:
 <li><strong>5th</strong> @Compendium[pf2e.spells-srd.TCk2MDwf5L5OYjFC]{Cloak of Colors}, @Compendium[pf2e.spells-srd.aIHY2DArKFweIrpf]{Command}</li>
 </ul>
 ------ Description (fr) ------
-<p> Ce personnel de bois noir très poli ressemble à une canne à pied surdimensionnée d'Aristocrate, avec une tête d'argent en forme de grosse animal de cirque tel qu'un cheval ou un éléphant. RingMasters ou Annonceurs Utilisez <EM> STAVES DE RANSMASTER </EM> pour attirer l'attention de leurs publics ou aux actes de récupération qui tombent à la mi-performance. </p>
+<p> Ce bâton de bois noir poli ressemble à une canne d'aristocrate surdimensionnée, avec une tête d'argent en forme de gros animal de cirque tel qu'un cheval ou un éléphant. Les maîtres de cérémonies et les annonceurs utilisent le <em>bâton de maître de cérémonie</em> pour attirer l'attention de leurs publics ou pour rattraper les numéros qui échouent en cours d'exécution.</p>
 <p> Tout en brandissant un </em> le personnel de Ring Master </EM>, votre voix normale peut être clairement entendue par toutes les créatures à moins de 300 pieds, peu importe les barrières intervenantes ou le bruit ambiant, bien que votre voix ne puisse pas pénétrer le silence magique et que vous pouvez ' t Utilisez-le pour étendre un effet auditif ou sonique à travers des obstacles qui le bloqueraient autrement. </p>
-<p> <strong> activer </strong> lancer un sort </p>
-<p> <strong> effet </strong> Vous dépensez un certain nombre de charges du personnel pour lancer un sort de sa liste. </p>
-<p> <strong> EXIGENCES D'ARTISANAT </FORT> Fournissez une coulée de tous les niveaux énumérés de tous les sorts répertoriés. </p>
+<p><strong>Activation</strong> Lancer un sort</p>
+<p><strong>Effet</strong> Vous dépensez un certain nombre de charges du bâton pour lancer un sort de sa liste.</p>
+<p> strong>Conditions de fabrication</strong> Fournir une incantation de tous les sorts de la liste et à tous les niveaux énumérés.</p>
 <ul>
-<li> <strong> Cantrip </strong> s @compendium [pf2e.spells-srd.kl2q6jvbzwed4b6v] {lumières de danse} </li>
-<li> <strong> 1st </strong> @compendium [pf2e.spells-srd.ttwokgqmzeksysynmh] {Feather Fall}, @comendium [pf2e.spells-srd.lvezn4a3kyf1ohmg] {Disque flottant} </Li>
-<li> <strong> 2e </strong> @compendium [pf2e.spells-srd.0qaqksrggdj74hxe] {scinterdust}, @comendium [pf2e.spells-srd.f8sboxixqjlckqly] {créature illusoire}, @comendium [pf2e.spells-srd .9xHMC2JGTUIQ1CCM] {obscurcissant brume} </li>
-<li> <strong> 3ème </strong> @compendium [pf2e.spells-srd.iihxwhrfpsbgq5js] {wortron}, @compendium [pf2e.spells-srd.tubxnrauyzrx1u] {Pyrotechnics} </Li>
-<li> <strong> 4ème </strong> @compendium [pf2e.spells-srd.aqrynosvxsvfqglh] {liberté de mouvement}, @comendium [pf2e.spells-srd.4ynon9jhyqtlzccu] {sommon animal} </li>
-<li> <strong> 5ème </strong> @compendium [pf2e.spells-srd.tck2mdwf5l5OYJFC] {manteau de couleurs}, @compendium [pf2e.spells-srd.aihy2darkfweirpf] {Commande} </li>
+<li><strong>Tour de magie</strong> @Compendium[pf2e.spells-srd.kl2q6JvBZwed4B6v]{lumières dansantes}</li>
+<li><strong>Niveau 1</strong> @Compendium[pf2e.spells-srd.TTwOKGqmZeKSyNMH]{feuille morte}, @Compendium[pf2e.spells-srd.LvezN4a3kYf1OHMg]{disque flottant}</li>
+<li><strong>Niveau 2</strong> @Compendium[pf2e.spells-srd.0qaqksrGGDj74HXE]{poussière scintillante}, @Compendium[pf2e.spells-srd.f8SBoXiXQjlCKqly]{créature illusoire}, @Compendium[pf2e.spells-srd.9XHmC2JgTUIQ1CCm]{brume de dissimulation}</li>
+<li><strong>Niveau 3</strong> @Compendium[pf2e.spells-srd.IihxWhRfpsBgQ5jS]{discours captivant}, @Compendium[pf2e.spells-srd.TUbXnR4RAuYzRx1u]{pyrotechnie}</li>
+<li><strong>Niveau 4</strong> @Compendium[pf2e.spells-srd.aqRYNoSvxsVfqglH]{liberté de mouvement}, @Compendium[pf2e.spells-srd.4YnON9JHYqtLzccu]{convocation d'animal}</li>
+<li><strong>Niveau 5</strong> @Compendium[pf2e.spells-srd.TCk2MDwf5L5OYjFC]{cape colorée}, @Compendium[pf2e.spells-srd.aIHY2DArKFweIrpf]{injonction}</li>
 </ul>
  
