traductions des dons et dons scindés

--- a/data/feats/general-01-XKDFgBEtFdEzCz8X.htm
+++ b/data/feats/general-01-XKDFgBEtFdEzCz8X.htm
@@ -1,8 +1,8 @@
 Name: Intuitive Crafting
-Nom: 
+Nom: Artisanat intuitif
 PrereqEN: 
 PrereqFR: 
-État: aucune
+État: libree
 
 ------ Description (en) ------
 <p>Your affinity with process and order makes you a natural artisan. You gain the trained proficiency rank in Crafting (or another skill of your choice, if you’re already trained in Crafting). You gain the Specialty Crafting skill feat in a specialty of your choice.</p>
@@ -22,3 +22,19 @@ PrereqFR:
 <li>@Compendium[pf2e.feats-srd.YvoiGWZhtbHH6NMF]{Specialty Crafting (Woodworking)}</li>
 </ul>
 ------ Description (fr) ------
+<p>Votre affinité avec le processus et l'ordre fait de vous un artisan naturel. Vous êtes qualifié en Artisanat (ou une autre compétence de votre choix, si vous étiez déjà qualifié en Artisanat). Vous obtenez le don de compétence Artisanat Spécialisé dans une spécialité de votre choix.</p>
+<hr />
+<ul>
+<li>@Compendium[pf2e.feats-srd.XVnpntqV6w94PoOb]{Artisanat spécialisé (Alchimie)}</li>
+<li>@Compendium[pf2e.feats-srd.59FN13nU6agKT4oa]{Artisanat spécialisé (Confection de livres)}</li>
+<li>@Compendium[pf2e.feats-srd.tbIMWrIRI9P9cubM]{Artisanat spécialisé (Construction navale)}</li>
+<li>@Compendium[pf2e.feats-srd.B06QKNvKYqxYGwPU]{Artisanat spécialisé (Couture)}</li>
+<li>@Compendium[pf2e.feats-srd.YvoiGWZhtbHH6NMF]{Artisanat spécialisé (Ébénisterie)}</li>
+<li>@Compendium[pf2e.feats-srd.S8mPrjJjuObotmjZ]{Artisanat spécialisé (Forge)}</li>
+<li>@Compendium[pf2e.feats-srd.WddEyALYHfpeUjZB]{Artisanat spécialisé (Maroquinerie)}</li>
+<li>@Compendium[pf2e.feats-srd.8XC2xJ7Y1xlr6Xor]{Artisanat spécialisé (Poterie)}</li>
+<li>@Compendium[pf2e.feats-srd.22HUfCajd6IkATOR]{Artisanat spécialisé (Sens artistique)}</li>
+<li>@Compendium[pf2e.feats-srd.TWkwy0uQvTGlgEFG]{Artisanat spécialisé (Taille de pierre)}</li>
+<li>@Compendium[pf2e.feats-srd.dTjzxCy9pku5gL0F]{Artisanat spécialisé (Tissage)}</li>
+<li>@Compendium[pf2e.feats-srd.YmzLnj4ojlf9INNP]{Artisanat spécialisé (Verrerie)}</li>
+</ul>
