--- a/data/feats/skill-01-nqaSdrxAE43lZZtI.htm
+++ b/data/feats/skill-01-nqaSdrxAE43lZZtI.htm
@@ -1,11 +1,14 @@
 Name: Terrain Expertise (Forest)
-Nom: 
+Nom: Expertise du terrain (Forêt)
 PrereqEN: trained in Survival
-PrereqFR: 
-État: aucune
+PrereqFR: qualifié en Survie
+État: officielle
 
 ------ Description (en) ------
 <p>Your experience in navigating a certain type of terrain makes you supremely confident while doing so. You gain a +1 circumstance bonus to Survival checks in forested terrain.</p>
 <hr />
 <p><strong>Special</strong> You can select this feat more than once, choosing a different type of terrain each time.</p>
 ------ Description (fr) ------
+<p>Votre expérience de l’orientation sur un certain type de terrain vous rend extrêmement confiant pour ce faire. Vous gagnez un bonus de circonstances de +1 aux tests de Survie sur le terrain <em>forestier</em>.</p>
+<hr />
+<p><strong>Spécial</strong> Vous pouvez sélectionner ce don plus d’une fois en choisissant un type de terrain différent à chaque fois.</p>
