--- a/data/feats/general-13-3X8BkDZEDWp90U4u.htm
+++ b/data/feats/general-13-3X8BkDZEDWp90U4u.htm
@@ -1,9 +1,10 @@
 Name: Ancestor's Transformation
-Nom: 
+Nom: Transformation de l'ancêtre
 PrereqEN: 
 PrereqFR: 
-État: aucune
+État: libre
 
 ------ Description (en) ------
 <p>You can commune with ancestor spirits to assume the form of an enormous primeval strix. You can cast 5th-level @Compendium[pf2e.spells-srd.NzXpEzcZAjuDTZjK]{Aerial Form} as a primal innate spell once per day, but you take the form of a primeval strix, using the statistics for a bird form.</p>
 ------ Description (fr) ------
+<p>Vous pouvez communier avec les esprits ancestraux  pour prendre la forme d'un énorme strix primitif. Vous pouvez lancer @Compendium[pf2e.spells-srd.NzXpEzcZAjuDTZjK]{Forme aérienne} au niveau 5 comme un sort inné primordialune fois par jour, mais vous prenez la forme d'un strix primitif, en utilisant les statistiques d'une forme d'oiseau.</p>
