--- a/data/feats/general-13-O65q744snXtC5Uc4.htm
+++ b/data/feats/general-13-O65q744snXtC5Uc4.htm
@@ -1,9 +1,10 @@
 Name: Consistent Surge
-Nom: 
+Nom: Poussée consistante
 PrereqEN: Nanite Surge
-PrereqFR: 
-État: aucune
+PrereqFR: Poussé nanite
+État: libre
 
 ------ Description (en) ------
 <p>Your nanites are incredibly effective, capable of improving your body’s efficiency regularly. You can use Nanite Surge with a frequency of once per 10 minutes, rather than once per hour.</p>
 ------ Description (fr) ------
+<p>Vos nanites sont incroyablement efficcaces, capable d'améliorer l'efficacité de votre corps régulièrement. Vous pouvez utiliser Poussée nanite avec une fréquence de une fois par tranche de 10 minutes, au lieu d'une fois par heure.</p>
