--- a/data/feats/general-13-X5NRdQ1W0Y5t6MFi.htm
+++ b/data/feats/general-13-X5NRdQ1W0Y5t6MFi.htm
@@ -1,9 +1,11 @@
 Name: Dire Form
-Nom: 
+Nom: Forme sauvage
 PrereqEN: 
 PrereqFR: 
-État: aucune
+État: libre
 
 ------ Description (en) ------
 <p>Your hybrid shape is a hulking beast. While in your hybrid shape, you gain the effects of @Compendium[pf2e.spells-srd.wzctak6BxOW8xvFV]{Enlarge}.</p>
 ------ Description (fr) ------
+<p>Votre forme hybride est une bête massive</p>
+<p>Sous votre forme hybride, vous obtenez les effets d'@Compendium[pf2e.spells-srd.wzctak6BxOW8xvFV]{AgrandissementS}.</p>
