--- a/data/feats/skill-01-nmwk8yShqoYPW1QG.htm
+++ b/data/feats/skill-01-nmwk8yShqoYPW1QG.htm
@@ -1,8 +1,8 @@
 Name: Virtuosic Performer (Percussion)
-Nom: 
+Nom: Artiste virtuose (Percussion)
 PrereqEN: trained in Performance
-PrereqFR: 
-État: aucune
+PrereqFR: qualifié en Représentation
+État: officielle
 
 ------ Description (en) ------
 <p>You have exceptional talent with one type of performance. You gain a +1 circumstance bonus when playing a percussion instrument. If you are a master in Performance, this bonus increases to +2.</p>
@@ -10,3 +10,7 @@ PrereqFR:
 <p><strong>Example performances</strong> Chimes, drum, gong, xylophone</p>
 <p>If it's unclear whether the specialty applies, the GM decides.</p>
 ------ Description (fr) ------
+<p>Vous avez un talent exceptionnel dans un type de Représentation. Vous gagnez un bonus de circonstances de +1 quand vous effectuez un certain type de représentation. Si vous êtes un maître en Représentation, ce bonus augmente à +2.</p>
+<hr />
+<p><strong>Exemple de représentations</strong> Carillons, tambour, gong, xylophone</p>
+<p>S’il n’est pas évident de déterminer si la spécialité s’applique, c’est le MJ qui décide.</p>
