--- a/data/spells/evo-03-6mmEz1UoTHGB7Sy9.htm
+++ b/data/spells/evo-03-6mmEz1UoTHGB7Sy9.htm
@@ -1,6 +1,6 @@
 Name: Dragon Breath (Copper or Black)
 Nom: 
-État: auto-trad
+État: auto-deepl
 
 ------ Description (en) ------
 <p>You spew energy from your mouth, dealing [[/r 5d6 #acid]] acid damage in a 60-foot line. Affected creatures can make a basic Reflex save.</p>
