--- a/data/spells/evo-03-jupppBeFqhe6LMIb.htm
+++ b/data/spells/evo-03-jupppBeFqhe6LMIb.htm
@@ -1,6 +1,6 @@
 Name: Dragon Breath (Green)
 Nom: 
-État: auto-trad
+État: auto-deepl
 
 ------ Description (en) ------
 <p>You spew energy from your mouth, dealing [[/r 5d6 #poison]] poison damage in a 30-foot cone. Affected creatures can make a basic Fortitude save.</p>
