--- a/data/spells/evo-03-kfsv7zSHb3pr7s9v.htm
+++ b/data/spells/evo-03-kfsv7zSHb3pr7s9v.htm
@@ -1,6 +1,6 @@
 Name: Dragon Breath (Gold or Red)
 Nom: 
-État: auto-trad
+État: auto-deepl
 
 ------ Description (en) ------
 <p>You spew energy from your mouth, dealing [[/r 5d6 #fire]] fire damage in a 30-foot cone. Affected creatures can make a basic Reflex save.</p>
