--- a/data/spells/nec-01-ekGHLJSHGgWMUwkY.htm
+++ b/data/spells/nec-01-ekGHLJSHGgWMUwkY.htm
@@ -1,6 +1,6 @@
 Name: Touch of Corruption (Healing)
 Nom: 
-État: auto-trad
+État: auto-deepl
 
 ------ Description (en) ------
 <p>You infuse the target with negative energy. If the target is living, this deals 1d6 negative negative damage (basic Fortitude save); on a failed save, the target also takes a -2 status penalty to AC for 1 round.</p>
