--- a/data/spells/div-05-zaZieDHguhahmM2z.htm
+++ b/data/spells/div-05-zaZieDHguhahmM2z.htm
@@ -1,6 +1,6 @@
 Name: Waters of Prediction
 Nom: 
-État: auto-trad
+État: auto-deepl
 
 ------ Description (en) ------
 <p>You and the secondary casters peer into the still waters of a natural pool or lake to divine your collective future. Over the course of the minute following the ritual’s end, the waters display a scene of one possible future involving the primary caster and as many secondary casters as feasible. This scene is usually, but not necessarily, set within the next few days. The future is unwritten, so the casters would be wise to not read guarantees into the cryptic nature of the visions shown in the water.</p>
