--- a/data/spells/evo-03-0jWBnIDFpJjJShdQ.htm
+++ b/data/spells/evo-03-0jWBnIDFpJjJShdQ.htm
@@ -1,6 +1,6 @@
 Name: Dragon Breath (Blue or Bronze)
 Nom: 
-État: auto-trad
+État: auto-deepl
 
 ------ Description (en) ------
 <p>You spew energy from your mouth, dealing [[/r 5d6 #electricity]] electricity damage in a 60-foot line. Affected creatures can make a basic Reflex save.</p>
