--- a/data/spells/evo-03-N0h3UodJFKdNQw1Y.htm
+++ b/data/spells/evo-03-N0h3UodJFKdNQw1Y.htm
@@ -1,6 +1,6 @@
 Name: Dragon Breath (Brass)
 Nom: 
-État: auto-trad
+État: auto-deepl
 
 ------ Description (en) ------
 <p>You spew energy from your mouth, dealing [[/r 5d6 #fire]] fire damage in a 60-foot line. Affected creatures can make a basic Reflex save.</p>
