--- a/data/spells/evo-03-bmDgIbLa5NfkP97J.htm
+++ b/data/spells/evo-03-bmDgIbLa5NfkP97J.htm
@@ -1,6 +1,6 @@
 Name: Dragon Breath (Silver or White)
 Nom: 
-État: auto-trad
+État: auto-deepl
 
 ------ Description (en) ------
 <p>You spew energy from your mouth, dealing [[/r 5d6 #cold]] cold damage in a 30-foot cone. Affected creatures can make a basic Reflex save.</p>
