--- a/data/spells/nec-01-IxyD7YdRbSSucxZp.htm
+++ b/data/spells/nec-01-IxyD7YdRbSSucxZp.htm
@@ -1,6 +1,6 @@
 Name: Lay on Hands (Vs. Undead)
 Nom: 
-État: auto-trad
+État: auto-deepl
 
 ------ Description (en) ------
 <p>Your hands become infused with positive energy, healing a living creature or damaging an undead creature with a touch.</p>
