Traduction de 3 armures

--- a/data/equipment/armor-13-GAu6v14pCSgLJh2D.htm
+++ b/data/equipment/armor-13-GAu6v14pCSgLJh2D.htm
@@ -1,6 +1,6 @@
 Name: Noxious Jerkin
-Nom: 
-État: aucune
+Nom: Pourpoint nocif
+État: libre
 
 ------ Description (en) ------
 <p>This +2 resilient padded armor is woven from many strands of gut cord strung with dried organs and preserved xulgath scent glands. When worn, it infuses your body with a ghastly and nauseating flavor.</p>
@@ -9,3 +9,8 @@ Nom:
 <p><strong>Effect</strong> Your attacker must attempt a DC 28 Fortitude saving throw. Creatures with a stench aura, such as otyughs and xulgaths, are immune to this effect.</p>
 <p><strong>Success</strong> The creature is unaffected and is immune to the effects of the noxious jerkin for 1 minute.<br /><strong>Failure</strong> The creature is sickened 1.<br /><strong>Critical Failure</strong> The creature is sickened 1 and is slowed 1 for 1 round.</p>
 ------ Description (fr) ------
+<p>Cette armure matelassée de résilience +2 est tissée à partir de nombreux brins de boyaux enfilés avec des organes séchés et des glandes odorantes xulgathes préservées. Lorsqu'elle est portée, elle imprègne votre corps d'une odeur épouvantable et nauséabonde. </p>
+<p><strong>Activation</strong> <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">F</span> imaginer</p>
+<p><strong>Déclencheur</strong> Vous êtes empoigné ou touché par une attaque à mains nues.</p>
+<p><strong>Effet</strong> Votre attaquant doit tenter un jet de sauvegarde de Vigueur DD 28. Les créatures dotées d'une aura de puanteur, comme les otyughs et les xulgaths, sont immunisées contre cet effet.</p>
+<p><strong>Succès</strong> La créature n'est pas affectée et est immunisée contre les effets du pourpoint nocif pendant 1 minute.<br /><strong>Echec</strong> La créature est malade 1.<br /><strong>Echec critique</strong> La créature est malade 1 et ralenti 1 pour 1 tour.</p>
