--- a/data/equipment/armor-12-QJNyQlmPNzIrnuLf.htm
+++ b/data/equipment/armor-12-QJNyQlmPNzIrnuLf.htm
@@ -1,6 +1,6 @@
 Name: Jawbreaker Shield
-Nom: 
-État: aucune
+Nom: Bouclier brise-mâchoire
+État: libre
 
 ------ Description (en) ------
 <p>This heavy bone shield is composed of a massive plate of dinosaur bone with jagged, tooth-like ridges ringing its edge. It has Hardness 12, HP 48, and BT 24. The ridges are unremovable +1 striking shield spikes that deal slashing damage instead of piercing damage.</p>
@@ -13,3 +13,12 @@ Nom:
 <p><strong>Failure</strong> You wound the target's mouth. It takes 1d6 persistent bleed damage and takes a -2 status penalty to attack and damage rolls with jaws, fangs, or similar Strikes for 24 hours.</p>
 <p><strong>Critical Failure</strong> You break the target's jaw. As failure, and the creature can't make Strikes using its mouth for 1 minute. At the end of its turn, it can attempt a Fortitude save to regain the ability to make Strikes using its mouth.</p>
 ------ Description (fr) ------
+<p>Ce lourd bouclier d'os est composé d'une plaque massive d'os de dinosaure avec des crêtes dentelées en forme de dent qui entourent son bord. Il a une Solidité de 12, 48 PV et un SR de 24. Les crêtes sont des pointes de bouclier de +1 inamovibles qui infligent des dégâts tranchants au lieu de dégâts perforants.</p>
+<p>Lorsque vous tenez le bouclier brise-mâchoire, vous gagnez un bonus d'objet de +3 à votre DD de Réflexes pour résister aux attaques Gober.</p>
+<hr />
+<p><strong>Activation</strong> <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">R</span> Interagir</p>
+<p><strong>Déclencheur</strong> Une créature vous attaque avec une Frappe de mâchoires, de crocs, ou une Frappe similaire en utilisant sa bouche.</p>
+<p><strong>Effet</strong> Vous effectuez une Frappe de Coup de bouclier en réaction contre l'attaquant. Si le Coup de bouclier touche, la cible subit des dégâts et doit tenter un jet de sauvegarde de Vigueur DD 31. Les effets du jet de sauvegarde sont déterminés après la résolution des effets de la Frappe de déclenchement.</p>
+<p><strong>Succès</strong> La cible n’est pas affectée.</p>
+<p><strong>Echec</strong> Vous blessez la bouche de la cible. Elle subit 1d6 dégâts de saignement persistants et subit une pénalité de statut de -2 aux jets d'attaque et de dégâts avec des mâchoires, des crocs ou des Frappes similaires pendant 24 heures.</p>
+<p><strong>Echec critique</strong> Vous brisez la mâchoire de la cible. Comme en cas d’échec, et la créature ne peut pas porter de Frappe avec sa bouche pendant 1 minute. À la fin de son tour, elle peut tenter un jet de sauvegarde de Vigueur pour retrouver la capacité de porter des Frappes avec sa bouche.</p>
