--- a/data/equipment/weapon-10-6u14xOkKhnB9lVy0.htm
+++ b/data/equipment/weapon-10-6u14xOkKhnB9lVy0.htm
@@ -1,9 +1,10 @@
 Name: Staff of Illusion (Greater)
 Nom: Bâton d'illusion supérieur
-État: officielle
+État: changé
+État d'origine: officielle
 
 ------ Description (en) ------
-<p>This ornately designed metal staff shines with precious inlays of gold. When you Cast a Spell from the staff, the illusory image of something you desire flashes across its surface. While wielding the staff, you gain a +2 circumstance bonus to checks to identify illusion magic.</p>
+<p>This staff is tapered at the base and carved into a gem-studded twist at the top. While wielding the staff, you gain a +2 circumstance bonus to checks to identify evocation magic.</p>
 <p><strong>Activate</strong> Cast a Spell</p>
 <p><strong>Effect</strong> You expend a number of charges from the staff to cast a spell from its list.</p>
 <ul>
@@ -36,4 +37,3 @@ Nom: Bâton d'illusion supérieur
 <ul>
 <li> +2 bonus de circonstance aux tests pour identifier la magie d'illusion</li>
 </ul>
- 
