--- a/data/equipment/weapon-06-tpKD2TZEzAToow1O.htm
+++ b/data/equipment/weapon-06-tpKD2TZEzAToow1O.htm
@@ -1,6 +1,7 @@
 Name: Ringmaster's Staff
 Nom: Bâton de maître de cérémonie
-État: libre
+État: changé
+État d'origine: libre
 
 ------ Description (en) ------
 <p>This highly polished black wooden staff resembles an aristocrat's oversized walking cane, complete with a silver head shaped like a large circus animal such as a horse or elephant. Ringmasters or announcers use <em>ringmaster's staves</em> to draw attention from their audiences or to salvage acts that fall flat mid-performance.</p>
@@ -9,7 +10,7 @@ Nom: Bâton de maître de cérémonie
 <p><strong>Effect</strong> You expend a number of charges from the staff to cast a spell from its list.</p>
 <p><strong>Craft Requirements</strong> Supply one casting of all listed levels of all listed spells.</p>
 <ul>
-<li><strong>Cantrips</strong> @Compendium[pf2e.spells-srd.kl2q6JvBZwed4B6v]{Dancing Lights}</li>
+<li><strong>Cantrip</strong> s @Compendium[pf2e.spells-srd.kl2q6JvBZwed4B6v]{Dancing Lights}</li>
 <li><strong>1st</strong> @Compendium[pf2e.spells-srd.TTwOKGqmZeKSyNMH]{Feather Fall}, @Compendium[pf2e.spells-srd.LvezN4a3kYf1OHMg]{Floating Disk}</li>
 <li><strong>2nd</strong> @Compendium[pf2e.spells-srd.0qaqksrGGDj74HXE]{Glitterdust}, @Compendium[pf2e.spells-srd.f8SBoXiXQjlCKqly]{Illusory Creature}, @Compendium[pf2e.spells-srd.9XHmC2JgTUIQ1CCm]{Obscuring Mist}</li>
 </ul>
