capacités de classe du prêtre éclatées et relues

--- a/data/classfeatures/cleric-01-xxkszluN9icAiTO4.htm
+++ b/data/classfeatures/cleric-01-xxkszluN9icAiTO4.htm
@@ -1,6 +1,6 @@
 Name: First Doctrine (Warpriest)
-Nom: 
-État: auto-trad
+Nom: Premier dogme (Prêtre combattant)
+État: libre
 
 ------ Description (en) ------
 <p>You're trained in light and medium armor, and you have expert proficiency in Fortitude saves.</p>
@@ -8,7 +8,6 @@ Nom:
 <p>If your deity's weapon is simple, you gain the @Compendium[pf2e.feats-srd.DfLkIIg2reyYW3a8]{Deadly Simplicity} cleric feat.</p>
 <p>At 13th level, if you gain the divine defense class feature, you also gain expert proficiency in light and medium armor.</p>
 ------ Description (fr) ------
-<p>Vous'êtes entraîné au maniement des armures légères et moyennes, et vous avez une compétence d'expert aux sauvegardes de Force.</p>
-<p>Vous gagnez l'exploit général @Compendium[pf2e.feats-srd.jM72TjJ965jocBV8]{Blocage de bouclier}, une réaction pour réduire les dégâts avec un bouclier.</p>
-<p>Si l’arme de votre divinité est simple, vous gagnez la prouesse @Compendium[pf2e.feats-srd.DfLkIIg2reyYW3a8]{Simplicité mortelle} clerc.</p>
-Au 13ème niveau, si vous obtenez le trait de classe défense divine, vous gagnez également une compétence d'expert en armure légère et moyenne.</p>
+<p>vous êtes qualifié avec les armures légères et intermédiaires et vous êtes expert pour les jets de Vigueur. Vous obtenez le don général @Compendium[pf2e.feats-srd.jM72TjJ965jocBV8]{Blocage au bouclier}, une réaction qui vous permet de réduire les dégâts avec votre bouclier.</p>
+<p>Si l’arme de votre divinité est simple, vous gagnez le don de prêtre @Compendium[pf2e.feats-srd.DfLkIIg2reyYW3a8]{Simplicité mortelle}.</p>
+<p>Au niveau 13, si vous obtenez la capacité de classe défense divine, vous devenez aussi expert avec les armures légères et intermédiaires.</p></p>
