--- a/data/classfeatures/cleric-03-sa7BWfnyCswAvBVa.htm
+++ b/data/classfeatures/cleric-03-sa7BWfnyCswAvBVa.htm
@@ -1,8 +1,8 @@
 Name: Second Doctrine (Cloistered Cleric)
-Nom: 
-État: auto-trad
+Nom: Deuxième dogme (Prêtre cloîtré)
+État: officielle
 
 ------ Description (en) ------
 <p>Your proficiency rank for Fortitude saves increases to expert.</p>
 ------ Description (fr) ------
-Votre rang de compétence pour les sauvegardes de Force passe à expert ;
+<p>Votre rang de maîtrise pour les jets de Vigueur passe à expert.</p>
