--- a/data/classfeatures/cleric-07-Zp81uTBItG1xlH4O.htm
+++ b/data/classfeatures/cleric-07-Zp81uTBItG1xlH4O.htm
@@ -1,10 +1,10 @@
 Name: Third Doctrine (Warpriest)
-Nom: 
-État: auto-trad
+Nom: Troisième dogme (Prêtre combattant) 
+État: officielle
 
 ------ Description (en) ------
 <p>You gain expert proficiency with your deity's favored weapon.</p>
 <p>When you critically succeed at an attack roll using that weapon, you apply the weapon's critical specialization effect; use your divine spell DC if necessary.</p>
 ------ Description (fr) ------
-<p>Vous gagnez une compétence d'expert avec l'arme préférée de votre divinité.</p>
-<p>Lorsque vous réussissez de manière critique un jet d'attaque avec cette arme, vous appliquez l'effet de spécialisation critique de l'arme ; utilisez votre DC de sort divin si nécessaire ;
+<p>Vous devenez expert avec l’arme de prédilection de votre divinité.</p>
+<p>Quand vous obtenez un succès critique sur un jet d’attaque en maniant cette arme, vous appliquez l’effet critique spécialisé de l’arme, en utilisant le DD de vos sorts divins si nécessaire.</p>
