--- a/data/classfeatures/cleric-07-s8WEmc4GGZSHSC7q.htm
+++ b/data/classfeatures/cleric-07-s8WEmc4GGZSHSC7q.htm
@@ -1,8 +1,8 @@
 Name: Third Doctrine (Cloistered Cleric)
-Nom: 
-État: auto-trad
+Nom: Troisième dogme (Prêtre cloîtré)
+État: officielle
 
 ------ Description (en) ------
 <p>Your proficiency ranks for divine spell attack rolls and spell DCs increase to expert.</p>
 ------ Description (fr) ------
-Vos rangs de compétence pour les jets d'attaque des sorts divins et les DC des sorts passent à expert.</p>
+<p>Vos rangs de maîtrise pour les jets d’attaque des sorts divins et le DD de ces sorts passent à expert.</p>
