--- a/data/classfeatures/cleric-13-0mJTp4LdEHBLInoe.htm
+++ b/data/classfeatures/cleric-13-0mJTp4LdEHBLInoe.htm
@@ -1,9 +1,8 @@
 Name: Divine Defense
 Nom: Défense divine
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>Your training and your deity protect you from harm. Your proficiency rank in unarmored defense increases to expert.</p>
 ------ Description (fr) ------
-<p><span id="ctl00_MainContent_DetailedOutput">Votre entraînement et votre divinité vous protègent contre les coups. Votre rang de maîtrise pour la défense sans armure passe à expert.&nbsp;</span></p>
+<p>Votre entraînement et votre divinité vous protègent contre les coups. Votre rang de maîtrise pour la défense sans armure passe à expert.</p>
