--- a/data/classfeatures/cleric-01-ZZzLMOUAtBVgV1DF.htm
+++ b/data/classfeatures/cleric-01-ZZzLMOUAtBVgV1DF.htm
@@ -1,7 +1,6 @@
 Name: Cloistered Cleric
 Nom: Prêtre cloîtré
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>You are a cleric of the cloth, focusing on divine magic and your connection to your deity's domains.</p>
@@ -12,4 +11,10 @@ Nom: Prêtre cloîtré
 <p><strong>@Compendium[pf2e.classfeatures.n9W8MjjRgPpUTvWf]{Fifth Doctrine (15th)}:</strong> Your proficiency ranks for divine spell attack rolls and spell DCs increase to master.</p>
 <p><strong>@Compendium[pf2e.classfeatures.DgGefatQ4v6xT6f9]{Final Doctrine (19th)}:</strong> Your proficiency ranks for divine spell attack rolls and spell DCs increase to legendary.</p>
 ------ Description (fr) ------
-<p><span id="ctl00_MainContent_DetailedOutput">Vous êtes un prêtre du clergé qui se focalise sur la magie divine et sur votre rapport avec les domaines de votre divinité.<br><br><strong>Premier dogme (1er):</strong> vous obtenez le don de prêtre @Compendium[pf2e.feats-srd.hT4INKGtly4QY8KN]{Initié du domaine}.<br><strong>Deuxième dogme (3e):</strong> Votre rang de maîtrise pour les jets de Vigueur passe à expert.<br><strong>Troisième dogme (7e):</strong> vos rangs de maîtrise pour les jets d’attaque des sorts divins et le DD de ces sorts passent à expert.<br><strong>Quatrième dogme (11e):</strong> vous devenez expert avec l’arme de prédilection de votre divinité. Quand vous obtenez un succès critique sur un jet d’attaque avec cette arme, vous appliquez l’effet critique spécialisé de l’arme, en utilisant le DD de vos sorts divins si nécessaire.<br><strong>Cinquième dogme (15e):</strong> vos rangs de maîtrise pour les jets d’attaque des sorts divins et le DD de ces sorts passent à maître.<br><strong>Dernier dogme (19e):</strong> vos rangs de maîtrise pour les jets d’attaque des sorts divins et le DD de ces sorts passent à légendaire.&nbsp;</span></p>
+<p>Vous êtes un prêtre du clergé qui se focalise sur la magie divine et sur votre rapport avec les domaines de votre divinité.</p>
+<p><strong>@Compendium[pf2e.classfeatures.aiwxBj5MjnafCMyn]{Premier dogme (1er)}</strong> vous obtenez le don de prêtre @Compendium[pf2e.feats-srd.hT4INKGtly4QY8KN]{Initié du domaine}.</p>
+<p><strong>@Compendium[pf2e.classfeatures.sa7BWfnyCswAvBVa]{Deuxième dogme (3e)}</strong> Votre rang de maîtrise pour les jets de Vigueur passe à expert.</p>
+<p><strong>@Compendium[pf2e.classfeatures.s8WEmc4GGZSHSC7q]{Troisième dogme (7e)}</strong> vos rangs de maîtrise pour les jets d’attaque des sorts divins et le DD de ces sorts passent à expert.</p>
+<p><strong>@Compendium[pf2e.classfeatures.vxOf4LXZcqUG3P7a]{Quatrième dogme (11e)}</strong> vous devenez expert avec l’arme de prédilection de votre divinité. Quand vous obtenez un succès critique sur un jet d’attaque avec cette arme, vous appliquez l’effet critique spécialisé de l’arme, en utilisant le DD de vos sorts divins si nécessaire.</p>
+<p><strong>@Compendium[pf2e.classfeatures.n9W8MjjRgPpUTvWf]{Cinquième dogme (15e)}</strong> vos rangs de maîtrise pour les jets d’attaque des sorts divins et le DD de ces sorts passent à maître.</p>
+<p><strong>@Compendium[pf2e.classfeatures.DgGefatQ4v6xT6f9]{Dernier dogme (19e)}</strong> vos rangs de maîtrise pour les jets d’attaque des sorts divins et le DD de ces sorts passent à légendaire.</p>
