--- a/data/classfeatures/cleric-03-D34mPo29r1J3DPaX.htm
+++ b/data/classfeatures/cleric-03-D34mPo29r1J3DPaX.htm
@@ -1,8 +1,8 @@
 Name: Second Doctrine (Warpriest)
-Nom: 
-État: auto-trad
+Nom: Deuxième dogme (Prêtre combattant)
+État: officielle
 
 ------ Description (en) ------
 <p>You're trained in martial weapons.</p>
 ------ Description (fr) ------
-Tu es formé aux armes martiales ;
+<p>vous êtes qualifié avec les armes de guerre.</p>
