--- a/data/classfeatures/cleric-03-OnfrrwCfDFCFw0tc.htm
+++ b/data/classfeatures/cleric-03-OnfrrwCfDFCFw0tc.htm
@@ -1,6 +1,6 @@
 Name: Second Doctrine
-Nom: 
-État: auto-trad
+Nom:  Doctrine : deuxième dogme
+État: officielle
 
 ------ Description (en) ------
 <p>You gain the second benefit of your doctrine:</p>
@@ -9,8 +9,8 @@ Nom:
 <li>@Compendium[pf2e.classfeatures.D34mPo29r1J3DPaX]{Warpriest}</li>
 </ul>
 ------ Description (fr) ------
-<p>Vous gagnez le second bénéfice de votre doctrine:</p>
+<p>Vous gagnez le deuxième dogme de votre doctrine :</p>
 <ul>
-<li>@Compendium[pf2e.classfeatures.sa7BWfnyCswAvBVa]{Clerc cloîtré}</li>
-<li>@Compendium[pf2e.classfeatures.D34mPo29r1J3DPaX]{Warpriest}</li>
+<li>@Compendium[pf2e.classfeatures.sa7BWfnyCswAvBVa]{Prêtre cloîtré}</li>
+<li>@Compendium[pf2e.classfeatures.D34mPo29r1J3DPaX]{Prêtre combattant}</li>
 </ul>
