--- a/data/classfeatures/cleric-07-gxNxfN9OBlQ1icus.htm
+++ b/data/classfeatures/cleric-07-gxNxfN9OBlQ1icus.htm
@@ -1,6 +1,6 @@
 Name: Third Doctrine
-Nom: 
-État: auto-trad
+Nom: Doctrine : Troisième dogme
+État: officielle
 
 ------ Description (en) ------
 <p>You gain the third benefit of your doctrine:</p>
@@ -9,8 +9,8 @@ Nom:
 <li>@Compendium[pf2e.classfeatures.Zp81uTBItG1xlH4O]{Warpriest}</li>
 </ul>
 ------ Description (fr) ------
-<p>Vous gagnez le troisième bénéfice de votre doctrine:</p>
+<p>Vous gagnez le troisième dogme de votre doctrine:</p>
 <ul>
-<li>@Compendium[pf2e.classfeatures.s8WEmc4GGZSHSC7q]{Cloistered Cleric}</li>
-<li>@Compendium[pf2e.classfeatures.Zp81uTBItG1xlH4O]{Warpriest}</li>
+<li>@Compendium[pf2e.classfeatures.s8WEmc4GGZSHSC7q]{Prêtre cloîtré}</li>
+<li>@Compendium[pf2e.classfeatures.Zp81uTBItG1xlH4O]{Prêtre combattant}</li>
 </ul>
