--- a/data/classfeatures/cleric-11-o8nHreMyiLi64rZz.htm
+++ b/data/classfeatures/cleric-11-o8nHreMyiLi64rZz.htm
@@ -1,5 +1,5 @@
 Name: Fourth Doctrine
-Nom: 
+Nom: Doctrine : quatrième doctrine
 État: auto-trad
 
 ------ Description (en) ------
@@ -9,8 +9,8 @@ Nom:
 <li>@Compendium[pf2e.classfeatures.px3gVYp7zlEQIpcl]{Warpriest}</li>
 </ul>
 ------ Description (fr) ------
-<p>Vous gagnez le quatrième avantage de votre doctrine:</p>
+<p>Vous gagnez le quatrième dogme de votre doctrine :</p>
 <ul>
-<li>@Compendium[pf2e.classfeatures.vxOf4LXZcqUG3P7a]{Clerc cloîtré}</li>
-<li>@Compendium[pf2e.classfeatures.px3gVYp7zlEQIpcl]{Warpriest}</li>
+<li>@Compendium[pf2e.classfeatures.vxOf4LXZcqUG3P7a]{Prêtre cloîtré}</li>
+<li>@Compendium[pf2e.classfeatures.px3gVYp7zlEQIpcl]{Prêtre combattant}</li>
 </ul>
