--- a/data/classfeatures/cleric-11-px3gVYp7zlEQIpcl.htm
+++ b/data/classfeatures/cleric-11-px3gVYp7zlEQIpcl.htm
@@ -1,8 +1,8 @@
 Name: Fourth Doctrine (Warpriest)
-Nom: 
-État: auto-trad
+Nom: Quatrième dogme (Prêtre combattant)
+État: officielle
 
 ------ Description (en) ------
 <p>Your proficiency ranks for divine spell attack rolls and spell DCs increase to expert.</p>
 ------ Description (fr) ------
-Vos rangs de compétence pour les jets d'attaque des sorts divins et les DC des sorts passent à expert.</p>
+<p>Vos rangs de maîtrise pour les jets d’attaque des sorts divins et le DD de ces sorts passent à expert.</p>
