--- a/data/classfeatures/cleric-15-Zb7DuGbFoLEp0H1K.htm
+++ b/data/classfeatures/cleric-15-Zb7DuGbFoLEp0H1K.htm
@@ -1,6 +1,6 @@
 Name: Fifth Doctrine
-Nom: 
-État: auto-trad
+Nom: Doctrine : Cinquième dogme 
+État: officielle
 
 ------ Description (en) ------
 <p>You gain the fifth benefit of your doctrine:</p>
@@ -9,8 +9,8 @@ Nom:
 <li>@Compendium[pf2e.classfeatures.kmimy4VOaoEOgOiQ]{Warpriest}</li>
 </ul>
 ------ Description (fr) ------
-<p>Vous gagnez le cinquième avantage de votre doctrine:</p>
+<p>Vous obtenez le cinquième dogme de votre doctrine :</p>
 <ul>
-<li>@Compendium[pf2e.classfeatures.n9W8MjjRgPpUTvWf]{Clerc cloîtré}</li>
-<li>@Compendium[pf2e.classfeatures.kmimy4VOaoEOgOiQ]{Warpriest}</li>
+<li>@Compendium[pf2e.classfeatures.n9W8MjjRgPpUTvWf]{Prêtre cloîtré}</li>
+<li>@Compendium[pf2e.classfeatures.kmimy4VOaoEOgOiQ]{Prêtre combattant}</li>
 </ul>
