--- a/data/classfeatures/cleric-15-n9W8MjjRgPpUTvWf.htm
+++ b/data/classfeatures/cleric-15-n9W8MjjRgPpUTvWf.htm
@@ -1,8 +1,8 @@
 Name: Fifth Doctrine (Cloistered Cleric)
-Nom: 
-État: auto-trad
+Nom: Cinquième dogme (Prêtre cloîtré)
+État: officielle
 
 ------ Description (en) ------
 <p>Your proficiency ranks for divine spell attack rolls and spell DCs increase to master.</p>
 ------ Description (fr) ------
-Vos rangs de compétence pour les jets d'attaque et les DC des sorts divins passent à maître.</p>
+<p>Vos rangs de maîtrise pour les jets d’attaque des sorts divins et le DD de ces sorts passent à maître.</p>
