--- a/data/classfeatures/cleric-19-3uf31A91h3ywmlqm.htm
+++ b/data/classfeatures/cleric-19-3uf31A91h3ywmlqm.htm
@@ -1,9 +1,10 @@
 Name: Miraculous Spell
 Nom: Sort miraculeux
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>You're exalted by your deity and gain truly incredible spells. You gain a single 10th-level spell slot and can prepare a spell in that slot using divine spellcasting. . You can't use this spell slot for abilities that let you cast spells without expending spell slots or that give you more spell slots. You don't gain more 10th-level spells as you level up, though you can take the @Compendium[pf2e.feats-srd.QDjpZKOrWIV1G8XJ]{Maker of Miracles} feat to gain a second slot.</p>
 ------ Description (fr) ------
-<p><span id="ctl00_MainContent_DetailedOutput">Votre divinité vous exalte et vous permet de lancer des sorts véritablement stupéfiants. Vous gagnez un unique emplacement de sort de niveau 10 et pouvez l’utiliser pour préparer un sort avec incantation divine. Vous ne gagnez pas plus d’emplacements de niveau 10 en augmentant de niveau, mais vous pouvez prendre le don @Compendium[pf2e.feats-srd.QDjpZKOrWIV1G8XJ]{Faiseur de miracles} pour en obtenir un second.&nbsp;</span></p>
+<p>Votre divinité vous exalte et vous permet de lancer des sorts véritablement stupéfiants.</p>
+<p>Vous gagnez un unique emplacement de sort de niveau 10 et pouvez l’utiliser pour préparer un sort avec incantation divine.</p>
+<p>Vous ne gagnez pas plus d’emplacements de niveau 10 en augmentant de niveau mais vous pouvez prendre le don @Compendium[pf2e.feats-srd.QDjpZKOrWIV1G8XJ]{Faiseur de miracles} pour en obtenir un second.</p>
