--- a/data/classfeatures/cleric-19-DgGefatQ4v6xT6f9.htm
+++ b/data/classfeatures/cleric-19-DgGefatQ4v6xT6f9.htm
@@ -1,8 +1,8 @@
 Name: Final Doctrine (Cloistered Cleric)
-Nom: 
-État: auto-trad
+Nom: Dernier dogme (Prêtre cloîtré)
+État: officielle
 
 ------ Description (en) ------
 <p>Your proficiency ranks for divine spell attack rolls and spell DCs increase to legendary.</p>
 ------ Description (fr) ------
-Vos rangs de compétence pour les jets d'attaque et les DC des sorts divins passent à légendaire ;
+<p>vos rangs de maîtrise pour les jets d’attaque des sorts divins et le DD de ces sorts passent à légendaire.</p>
