--- a/data/classfeatures/cleric-19-urBGOPrUwBmkixAo.htm
+++ b/data/classfeatures/cleric-19-urBGOPrUwBmkixAo.htm
@@ -1,6 +1,6 @@
 Name: Final Doctrine
-Nom: 
-État: auto-trad
+Nom: Dernier dogme
+État: officielle
 
 ------ Description (en) ------
 <p>You gain the final benefit of your doctrine:</p>
@@ -9,8 +9,8 @@ Nom:
 <li>@Compendium[pf2e.classfeatures.N1ugDqZlslxbp3Uy]{Warpriest}</li>
 </ul>
 ------ Description (fr) ------
-<p>Vous gagnez le bénéfice final de votre doctrine:</p>
+<p>Vous obtenez le dernier dogme de votre doctrine :</p>
 <ul>
-<li>@Compendium[pf2e.classfeatures.DgGefatQ4v6xT6f9]{Clerc cloîtré}</li>
-<li>@Compendium[pf2e.classfeatures.N1ugDqZlslxbp3Uy]{Warpriest}</li>
+<li>@Compendium[pf2e.classfeatures.DgGefatQ4v6xT6f9]{Ptrêtre cloîtré}</li>
+<li>@Compendium[pf2e.classfeatures.N1ugDqZlslxbp3Uy]{Prêtre combattant}</li>
 </ul>
