relecture et traduction des capacités de monstre

--- a/data/bestiary-ability-glossary-srd/kdhbPaBMK1d1fpbA.htm
+++ b/data/bestiary-ability-glossary-srd/kdhbPaBMK1d1fpbA.htm
@@ -1,7 +1,6 @@
 Name: Telepathy
 Nom: Télépathie
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>A monster with telepathy can communicate mentally with any creatures within the listed radius, as long as they share a language. This doesn't give any special access to their thoughts, and communicates no more information than normal speech would.</p>
