--- a/data/bestiary-ability-glossary-srd/Lc3HEuUklab7IMy3.htm
+++ b/data/bestiary-ability-glossary-srd/Lc3HEuUklab7IMy3.htm
@@ -1,8 +1,8 @@
 Name: Instrument of Faith
-Nom: 
-État: auto-trad
+Nom: Instrument de la Foi
+État: libre
 
 ------ Description (en) ------
 <p>The divine warden is a beacon for its deity’s faith. A cleric of the divine warden’s patron deity can channel a @Compendium[pf2e.spells-srd.rfZpqmj0AIIdkVIs]{Heal} spell through a divine warden they can see within 60 feet. The cleric determines any targets or area for the spell as if they were standing in the divine warden’s space.</p>
 ------ Description (fr) ------
-<p>Le gardien divin est un phare pour la foi de sa divinité. Un clerc de la divinité protectrice du gardien divin peut canaliser un sort @Compendium[pf2e.spells-srd.rfZpqmj0AIIdkVIs]{Soins} à travers un gardien divin qu'il peut voir dans un rayon de 60 pieds. Le clerc détermine toute cible ou zone pour le sort comme s'il se tenait dans l'espace du gardien divin.</p>
+<p>Le gardien divin est un phare pour la foi de sa divinité. Un prêtre de la divinité protectrice du gardien divin peut canaliser un sort de @Compendium[pf2e.spells-srd.rfZpqmj0AIIdkVIs]{Guérison} à travers un gardien divin qu'il peut voir dans un rayon de 18 mètres. Le prêtre détermine la cible ou la zone pour le sort comme s'il se tenait dans la case du gardien divin.</p>
