Traduction et relectures capacités de monstre suite et fin

--- a/data/bestiary-ability-glossary-srd/v61oEQaDdcRpaZ9X.htm
+++ b/data/bestiary-ability-glossary-srd/v61oEQaDdcRpaZ9X.htm
@@ -1,7 +1,6 @@
 Name: Aura
 Nom: Aura
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>A monster's aura automatically affects everything within a specified emanation around that monster. The monster doesn't need to spend actions on the aura; rather, the aura's effects are applied at specific times, such as when a creature ends its turn in the aura or when creatures enter the aura.</p>
