--- a/data/bestiary-ability-glossary-srd/VdSMQ6yRZ3YXNXHL.htm
+++ b/data/bestiary-ability-glossary-srd/VdSMQ6yRZ3YXNXHL.htm
@@ -1,7 +1,6 @@
 Name: Wavesense
 Nom: Perception des ondes
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>This sense allows a monster to feel vibrations caused by movement through a liquid. It's an imprecise sense with a limited range (listed in the ability). Wavesense functions only if monster and the subject are in the same body of liquid, and only if the subject is moving through the liquid.</p>
