Traduction de 8 armures

--- a/data/equipment/armor-13-nzQKwdUxzmmwWtzT.htm
+++ b/data/equipment/armor-13-nzQKwdUxzmmwWtzT.htm
@@ -1,6 +1,6 @@
 Name: Medusa's Scream
-Nom: 
-État: auto-trad
+Nom: Cri de méduse
+État: libre
 
 ------ Description (en) ------
 <p>The ghastly visage of a slain <em>medusa's </em>head stares out from this <em>steel shield</em> (Hardness 13, HP 52, BT 26). The shield comes with a thick leather cover to conceal the head.</p>
@@ -23,17 +23,17 @@ Nom:
 </tbody>
 </table>
 ------ Description (fr) ------
-L'effroyable visage d'une tête de méduse tuée se détache de ce bouclier d'acier (dureté 13, HP 52, BT 26). Le bouclier est livré avec une épaisse housse de cuir pour dissimuler la tête.</p>
-<p><strong>Activer</strong> <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">2</span> Interagir (visuel);</p>
+L'effroyable visage d'une tête de <em>méduse </em>tuée se détache de ce <em>bouclier d'acier</em> (Solidité 13, PV 52, SR 26). Le bouclier est équipé d'une épaisse housse de cuir pour dissimuler la tête.</p>
+<p><strong>Activation</strong> <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">2</span> Interagir (visuel);</p>
 <p><strong>Fréquence</strong> une fois par jour;</p>
-<p><strong>Effet</strong> Vous révélez le visage de la méduse, concentrant son regard sur une créature dans un rayon de 30 pieds. Le bouclier lance<em> chair à pierre</em> avec une portée de 30 pieds.</p>
+<p><strong>Effet</strong> Vous révélez le visage de la méduse, concentrant son regard sur une créature dans un rayon de 9 mètres. Le bouclier lance<em> Chair en pierre</em> avec une portée de 9 mètres.</p>
 <p><strong>Conditions de fabrication</strong> Les matières premières initiales doivent inclure la tête d'une méduse.</p>
 <table style="height : 32px;" ; border="1">
 <tbody>
 <tr style="height : 15px;">
-<td style="height : 15px ; width : 115px;">Hardness</td>
-<td style="height : 15px ; width : 115px;">HP</td>
-<td style="height : 15px ; width : 116px;">BT</td>
+<td style="height : 15px ; width : 115px;">Solidité</td>
+<td style="height : 15px ; width : 115px;">PV</td>
+<td style="height : 15px ; width : 116px;">SR</td>
 </tr>
 <tr style="height : 17px;">
 <td style="height : 17px ; width : 115px;">13</td>
