--- a/data/equipment/armor-17-COsToVFlA36UmkB7.htm
+++ b/data/equipment/armor-17-COsToVFlA36UmkB7.htm
@@ -1,6 +1,6 @@
 Name: Jerkin of Liberation
-Nom: 
-État: auto-trad
+Nom: Pourpoint de la libération
+État: libre
 
 ------ Description (en) ------
 <p>This +2 greater resilient studded leather is traditionally inscribed with a symbol of either Norgorber or Cayden Cailean. Its leather is light as silk, and its buttons and studs are gleaming crystal. While you wear it, you get a +15-foot item bonus to your Speed, and effects that attempt to impose penalties on your Speed must first counteract the jerkin of liberation or they have no effect on you.</p>
@@ -11,10 +11,10 @@ Nom:
 <li>+15-foot item bonus to your Speed</li>
 </ul>
 ------ Description (fr) ------
-<p>Ce cuir clouté +2 plus résistant est traditionnellement inscrit d'un symbole de Norgorber ou de Cayden Cailean. Son cuir est léger comme de la soie, et ses boutons et clous sont en cristal étincelant. Lorsque vous le portez, vous bénéficiez d'un bonus d'objet de +15 pieds à votre Vitesse, et les effets qui tentent d'imposer des pénalités à votre Vitesse doivent d'abord contrer le jerkin de la libération ou ils n'ont aucun effet sur vous.</p>
-<p>De plus, vous êtes difficile à neutraliser. Vous utilisez le niveau de l’article du jerkin ou votre propre niveau, le plus élevé des deux, pour déterminer les effets du trait d’incapacité.</p>
+<p>Cette <em>armure de cuir clouté de résilience +2</em> est traditionnellement inscrite avec un symbole de Norgorber ou de Cayden Cailean. Son cuir est léger comme de la soie, et ses boutons et clous sont en cristal étincelant. Lorsque vous le portez, vous bénéficiez d'un bonus d'objet de 4,5 mètres à votre Vitesse, et les effets qui tentent d'imposer des pénalités à votre Vitesse doivent d'abord <em>Contrer</em> le <em>pourpoint de la libération</em> ou ils n'ont aucun effet sur vous.</p>
+<p>De plus, vous êtes difficile à mettre hors de combat. Vous utilisez le niveau d'objet du pourpoint ou votre propre niveau, le plus élevé des deux, pour déterminer les effets du trait <em>mise hors de combat</em>.</p>
 <hr />
 <p>Effets appliqués automatiquement:</p>
 <ul>
-<li>Bonus d'objet de +15 pieds à votre Vitesse</li>
+<li>Bonus d'objet de +4,5 pieds à votre Vitesse</li>
 </ul>
