--- a/data/equipment/armor-20-PlYr5AhYwHIztMw2.htm
+++ b/data/equipment/armor-20-PlYr5AhYwHIztMw2.htm
@@ -1,6 +1,6 @@
 Name: Shield of the Unified Legion
-Nom: 
-État: auto-trad
+Nom: Bouclier de la Légion Unifiée
+État: libre
 
 ------ Description (en) ------
 <p>This high-grade orichalcum shield (Hardness 16, HP 64, and BT 32) bears a +3 major striking shield boss that cannot be removed.</p>
@@ -12,11 +12,11 @@ Nom:
 <p><strong>Effect</strong> You heft the shield and thrust it forward, causing ephemeral reflections of the shield to surround you and then rush outward in a 90-foot line or 60-foot cone (your choice).</p>
 <p>Make a shield bash Strike against each enemy within the area, except that the damage dealt is force damage. Each target you hit is moved 10 feet away from you (each target you critically hit is also knocked prone). This is forced movement. These shield bashes count against your multiple attack penalty, but the penalty doesn't increase until after you have made all these attacks.</p>
 ------ Description (fr) ------
-<p>Ce bouclier en orichalque de haute qualité (dureté 16, HP 64 et BT 32) porte un bossage de bouclier de frappe majeure de +3 qui ne peut être retiré.</p>
+<p>Ce <em>bouclier en orichalque de haute qualité</em> (Solidité 16, PV 64 et SR 32) est équipé d'un <em>ombon de frappe majeure +3</em> qui ne peut être retiré.</p>
 <p>Il brille dans n'importe quelle lumière, attirant l'attention à tout moment.</p>
-<p>Lorsque vous levez ce bouclier, des reflets éphémères de celui-ci apparaissent devant chacun de vos alliés dans un rayon de 30 pieds, leur accordant son bonus de circonstances de +2 à la CA tant qu'ils se trouvent dans un rayon de 30 pieds de vous et que votre bouclier est levé. @Compendium[pf2e.equipment-effects.ah41XCrV4LFsVyzl]{Effet : Bouclier de la Légion Unifiée}</p>
+<p>Lorsque vous Levez ce bouclier, des reflets éphémères de celui-ci apparaissent devant chacun de vos alliés dans un rayon de 9 mètres, leur accordant son bonus de circonstances de +2 à la CA tant qu'ils se trouvent dans un rayon de 9 mètres de vous et que votre bouclier est levé. @Compendium[pf2e.equipment-effects.ah41XCrV4LFsVyzl]{Effet : Bouclier de la Légion Unifiée}</p>
 <hr />
-<p><strong>Activate</strong> (2 actions) Interagir (force)</p>
+<p><strong>Activation</strong> (2 actions) Interagir (force)</p>
 <p><strong>Fréquence</strong> une fois par minute</p>
-<p><strong>Effet</strong> Vous soulevez le bouclier et le projetez vers l'avant, provoquant des reflets éphémères du bouclier qui vous entourent puis se précipitent vers l'extérieur en une ligne de 90 pieds ou un cône de 60 pieds (au choix).</p>
-<p>Effectuez une frappe de coup de bouclier contre chaque ennemi se trouvant dans la zone, sauf que les dégâts infligés sont des dégâts de force. Chaque cible que vous touchez est éloignée de 10 pieds de vous (chaque cible que vous touchez de manière critique est également mise à terre). Il s'agit d'un mouvement forcé. Ces coups de bouclier comptent dans votre pénalité d'attaque multiple, mais cette pénalité n'augmente qu'après avoir effectué toutes ces attaques ;
+<p><strong>Effet</strong> Vous soulevez le bouclier et le poussez vers l'avant. Les reflets du bouclier vous entourent alors, puis se précipitent vers l'extérieur en une ligne de 27 mètres ou un cône de 18 mètres (au choix).</p>
+<p>Effectuez une Frappe de Coup de bouclier contre chaque ennemi se trouvant dans la zone, sauf que les dégâts infligés sont des dégâts de force. Chaque cible que vous touchez est repoussée de 3 mètres de vous (chaque cible que vous touchez de manière critique est tombe également à terre). Il s'agit d'un déplacement forcé. Ces coups de bouclier comptent dans votre pénalité d'attaque multiple, mais cette pénalité n'augmente qu'après avoir effectué toutes ces attaques ;
