--- a/data/equipment/armor-09-nVlKU2et4EeReayr.htm
+++ b/data/equipment/armor-09-nVlKU2et4EeReayr.htm
@@ -21,14 +21,14 @@ Nom: Harnois de la victoire
 <li><strong>Undead</strong>: negative</li>
 </ul>
 ------ Description (fr) ------
-<p>Les plaques de métal de ce <em>harnois résilient +1</em> sont recouvertes d'un tabard lumineux comportant un blason distinctif divisé en quatre champs. Cet insigne enregistre magiquement vos récentes victoires, affichant un triomphe dans chaque champ du blason, vous permettant de faire appel à ces victoires pour vous aider dans les batailles futures.</p>
+<p>Les plaques de métal de ce <em>harnois de résilience +1</em> sont recouvertes d'un tabard brillant arborant un blason distinctif divisé en quatre champs. Cet insigne enregistre magiquement vos récentes victoires, affichant un triomphe dans chaque champ du blason, ce qui vous permet de faire appel à ces victoires pour vous aider dans vos futures batailles.</p>
 <p><strong>Activation</strong> <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">R</span> imaginer;</p>
-<p><strong>Déclencheur</strong> Vous tuez ou détruisez une créature d'un niveau égal ou supérieur à votre <em>harnois de la victoire </em>(ajusté comme d'habitude si vous ajoutez des runes fondamentales à votre harnois de la victoire). Cette créature doit avoir l'un des traits listés dans la deuxième activation;</p>
+<p><strong>Déclencheur</strong> Vous tuez ou détruisez une créature d'un niveau égal ou supérieur à votre <em>harnois de la victoire </em>(ajusté comme d'habitude si vous ajoutez des runes fondamentales à votre harnois de la victoire). Cette créature doit posséder l'un des traits listés dans la deuxième activation;</p>
 <p><strong>Effet</strong> Vous ordonnez à l'armure de commémorer votre victoire. Le blason du tabard de l'armure change pour incorporer un symbole lié à la créature tuée, et la victoire est enregistrée dans le tabard. Si vous avez déjà enregistré quatre victoires, choisissez-en une à remplacer par la nouvelle victoire.</p>
 <hr />
 <p><strong>Activation</strong> <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">2</span> imaginer, Interagir;</p>
 <p><strong>Fréquence</strong> 1/h;</p>
-<p><strong>Effet</strong> Vous touchez l'un des quatre champs du tabard représentant l'une de vos victoires et vous vous rappelez votre triomphe sur cette créature. Cette créature disparaît du tabard, et pendant 1 minute, vous gagnez une résistance de 5 à un type de dégât basé sur le trait de la créature (vous gagnez de la résistance d'un seul type, même si la créature a plus d'un trait qui pourrait s'appliquer) :</p>
+<p><strong>Effet</strong> Vous touchez l'un des quatre champs du tabard représentant l'une de vos victoires et vous vous rappelez votre triomphe sur cette créature. Cette créature disparaît du tabard, et pendant 1 minute, vous gagnez une résistance de 5 à un type de dégât basé sur le trait de la créature (vous gagnez une résistance à un seul type, même si la créature a plus d'un trait qui pourrait s'appliquer) :</p>
 <ul>
 <li><strong>Aberration</strong> ou <strong>Fée</strong> : mental</li>
 <li><strong>Céleste</strong> : bon</li>
