--- a/data/equipment/armor-12-QJNyQlmPNzIrnuLf.htm
+++ b/data/equipment/armor-12-QJNyQlmPNzIrnuLf.htm
@@ -1,5 +1,5 @@
 Name: Jawbreaker Shield
-Nom: Bouclier brise-mâchoire
+Nom: Bouclier Brise-mâchoire
 État: libre
 
 ------ Description (en) ------
@@ -14,7 +14,7 @@ Nom: Bouclier brise-mâchoire
 <p><strong>Critical Failure</strong> You break the target's jaw. As failure, and the creature can't make Strikes using its mouth for 1 minute. At the end of its turn, it can attempt a Fortitude save to regain the ability to make Strikes using its mouth.</p>
 ------ Description (fr) ------
 <p>Ce lourd bouclier d'os est composé d'une plaque massive d'os de dinosaure avec des crêtes dentelées en forme de dent qui entourent son bord. Il a une Solidité de 12, 48 PV et un SR de 24. Les crêtes sont des pointes de bouclier de +1 inamovibles qui infligent des dégâts tranchants au lieu de dégâts perforants.</p>
-<p>Lorsque vous tenez le bouclier brise-mâchoire, vous gagnez un bonus d'objet de +3 à votre DD de Réflexes pour résister aux attaques Gober.</p>
+<p>Lorsque vous tenez le bouclier brise-mâchoire, vous gagnez un bonus d'objet de +3 à votre DD de Réflexes pour résister aux attaques @Compendium[pf2e.bestiary-ability-glossary-srd.uJSseLa57HZYSMUu]{Gober}.</p>
 <hr />
 <p><strong>Activation</strong> <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">R</span> Interagir</p>
 <p><strong>Déclencheur</strong> Une créature vous attaque avec une Frappe de mâchoires, de crocs, ou une Frappe similaire en utilisant sa bouche.</p>
