--- a/data/backgrounds/ffcNsTUBsxFwbNgJ.htm
+++ b/data/backgrounds/ffcNsTUBsxFwbNgJ.htm
@@ -11,6 +11,6 @@ Nom: Survivant de Dernier-Rempart
 ------ Description (fr) ------
 <p><strong>Prérequis</strong> Région - Œil de l'effroi</p>
 <hr />
-<p>Vous avez échappé à la dévastation que le Tyran qui Murmure a apporté à votre nation, mais vous avez tout perdu devant les laquais du Roi-Liche, incluant votre foyer et nombre d'amis et de membres de votre famille.</p>
+<p>Vous avez échappé à la dévastation que le Tyran qui Murmure a apporté à votre nation, mais vous avez tout perdu - foyer, famille et bon nombre d'amis - aux mains des laquais du Roi-Liche.</p>
 <p>Choisissez deux primes de caractéristiques. Une de ces primes doit être <strong>Constitution</strong> ou <strong>sagesse</strong>, et l’autre est une prime de caractéristique libre.</p>
 <p>Vous êtes qualifié dans la compétence Médecine et Connaissance des morts-vivants. Vous gagnez le don de compétence @Compendium[pf2e.feats-srd.wYerMk6F1RZb0Fwt]{Médecine militaire}.</p>
