--- a/data/backgrounds/ffcNsTUBsxFwbNgJ.htm
+++ b/data/backgrounds/ffcNsTUBsxFwbNgJ.htm
@@ -1,5 +1,5 @@
 Name: Lastwall Survivor
-Nom: Survivant de Dernier-Rempart
+Nom: Survivant du Dernier-Rempart
 État: libre
 
 ------ Description (en) ------
