--- a/data/backgrounds/fML6YrXYDqQy0g7L.htm
+++ b/data/backgrounds/fML6YrXYDqQy0g7L.htm
@@ -1,5 +1,5 @@
 Name: Iolite Trainee Hobgoblin
-Nom: Recrue iolite hobgobeline
+Nom: Recrue Iolite Hobgobeline
 État: libre
 
 ------ Description (en) ------
